--- a/link01.html
+++ b/link01.html
@@ -56,6 +56,8 @@ Vladimir Putin gives state-of-nation address to Federal Assembly<br><br>
 Russia's President Vladimir Putin made the annual address to the Federal Assembly at noon, local time (8 am GMT). It is a double anniversary address: the 20th in Russia's recent history and the 10th made by Putin.<br><br>
 
 
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 
  
 Foreign Policy<br><br>
@@ -205,6 +207,7 @@ It is expected that the address may voice proposals made at a forum of the Russi
 Just a day before the address Putin discussed its preparations with members of the Russian Security Council.
 <br><br>
 Prime Minister Dmitry Medvedev, Presidential Administration Head Sergei Ivanov, State Duma Speaker Sergei Naryshkin, Russian Security Council Secretary Nikolai Patrushev, Interior Minister Vladimir Kolokoltsev, Defense Minister Sergei Shoigu, Federal Security Service Director Alexander Bortnikov, Foreign Intelligence Service Head Mikhail Fradkov and Russian Security Council permanent member Boris Gryzlov attended the meeting.
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
 <br><br>
 
