--- a/link03.html
+++ b/link03.html
@@ -51,17 +51,17 @@ Severn¡¯s speech before the UN Earth Summit in Rio, Brazil in 1992. <br><br>
 Èç¹ûÏÖÊµ²»ÊÇÕâÑù£¨»òÕß£¬Ñ§Ð£½ÌµÄÃ»ÓÐÓÃ£©£¬ÄÇÃ´Ò»¶¨ÊÇÄÄ¶ù³öÎÊÌâÁË£¿ <br><br>
 
 Robber Barons.<br><br>
-
+<a href= "link01.html">ÆÕ¾©2013Äê¹úÇé×ÉÎÄ£¨Putin 2013 state-of-nation Address£©</a><br><br>
+<a href= "link02.html">House of Cards¡¶Ö½ÅÆÎÝ¡·</a><br><br>
 
 ¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
 Severn Cullis-Suzuki was born and raised in Vancouver, British Columbia. Her mother is a writer (French) and father David Suzuki£¨ÁåÄ¾£© a third-generation Japanese Canadian. While attending Elementary School in French Immersion, at age 9, she founded the ECO. In 1992, at age 12, she raised money with members of ECO to attend the Earth Summit in Rio de Janeiro. <br><br>
 2020¶«¾©Éê°Â°ÂœöÑÅÃÀÓÃ·¨ÓïÑÝ½²¡£Takigawa Lardux Christel Masami was born in Paris, her father is French, mother is Japanese. <br><br>
 
-ÎÄ¸ïÆÚ¼ä£¬Íõ»¦ÄþÃ»ÓÐÏÂÏç¾«Í¨·¨Óï¡¢Íò¸ÖÏÂÏç¸ã¶¨µÂÓï¡¢ÁõÑÇÖÞ²Î¾üÑ§»áÓ¢Óï¡£ËùÒÔ£¬ÒªÖÁÉÙÒ»ÃÅÍâÓï¡£×î²îÒ²ÒªÏñÀî¼Î³ÏÒ»ÑùÑ§µãÔÁÓï°É£¿HongKong News Agora<br><br>
+ÎÄ¸ïÆÚ¼ä£¬Íõ»¦ÄþÃ»ÓÐÏÂÏç¾«Í¨·¨Óï¡¢Íò¸ÖÏÂÏç¸ã¶¨µÂÓï¡¢ÁõÑÇÖÞ²Î¾üÑ§»áÓ¢Óï¡£ËùÒÔ£¬ÒªÖÁÉÙÒ»ÃÅÍâÓï¡£×î²îÒ²ÒªÏñÀî¼Î³ÏÒ»ÑùÑ§µãÔÁÓï°É£¿Hong Kong News Agora<br><br>
 
-<a href= "link03.html">ÔÁÓï±£ÎÀÕ½</a><br><br>
-
+²»ÊÇÈ¥ÇóÑ§£¬¶øÊÇÇÀÖªÊ¶°¡£¡Àî¼Î³Ï²ÜµÂÍúÆ¾½èÒ»±¾´Çº£×ÔÑ§£¬Ò»Ñù¶¥ÌìÁ¢µØ£¡<br><br>
 
 Hello, I'm Severn Suzuki speaking (in English) for E.C.O. Environmental Children's Organisation. <br><br>
 We are a group of twelve and thirteen-year-olds from Canada trying to make a difference:  Vanessa Suttie, Morgan Geisler, ichelle Quigg and me. We raised all the money ourselves to come six thousand miles to tell you adults you must change your ways. Coming here today, I have no hidden agenda. I am fighting for my future.<br><br>
@@ -99,7 +99,9 @@ Then why do you go out and do the things you tell us not to do?<br><br>
 Do not forget why you're attending these conferences, who you're doing this for -- we are your own children. You are deciding what kind of world we will grow up in. Parents should be able to comfort their children by saying "everything's going to be alright" , "we're doing the best we can" and "it's not the end of the world".<br><br>
 But I don't think you can say that to us anymore. Are we even on your list of priorities? My father always says "You are what you do, not what you say." <br><br>
 Well, what you do makes me cry at night. You grownups say you love us. I challenge you, please make your actions reflect your words. Thank you for listening.<br><br>
-
+<a href= "pic01.html">Ìì¸³ÈËÈ¨ÄÐÅ®Æ½µÈ </a><br><br>
+<a href= "pic02.html">ÊÂÊµ¾ÍÊÇÊÂÊµ£¨Orgasm£©</a><br><br>
+<a href= "pic03.html">¸÷ÐÐÆäÊÇ¶øÒÑ</a><br><br>
 ¼{ –ßd¡¤Á_ÀûÀ­À­¡¤ÂüµÂÀ­£¨Ó¢ÕZ£ºNelson Rolihlahla Mandela 1918Äê7ÔÂ18ÈÕ£­2013Äê12ÔÂ5ÈÕ£©£¬ÄÏ·Ç´¨Ë¹„PÈË£¬ÊÇÄÏ·ÇÖøÃû·´·N×å¸ôëx¸ïÃü¼Ò¡¢ÕþÖÎ¼Ò¡¢´ÈÉÆ¼Ò£¬Ò²±»Ò•žéÄÏ·ÇµÄ‡ø¸¸¡£1994ÄêÖÁ1999ÄêégÈÎÄÏ·Ç¿‚½y£¬ÊÇµÚÒ»‚€ÓÉÈ«Ãæ´ú×hÖÆÃñÖ÷ßxÅeßx³öµÄÄÏ·ÇÔªÊ×¡£ËûÈÎƒÈÖÂÁ¦ì¶U³ý·N×å¸ôëxÖÆ¶ÈºÍŒ¬F·N×åºÍ½â£¬Ïû³ýØšÀ§ºÍ²»¹«¡£×÷žé·ÇÖÞ‡ø¼ÒÖ÷ÁxÕßºÍÃñÖ÷Éç•þÖ÷ÁxÕß£¬ËûÔÚ1991-1997ÄêÈÎ·ÇÖÞÈË‡øÃñ´ó•þÖ÷Ï¯£¬1998-1999ÄêÈÎ²»½YÃËß\„ÓÃØ•øéL¡£<br><br>
 
 ®”ßx¿‚½yÇ°£¬ÂüµÂÀ­ÊÇ·e˜OµÄ·´·N×å¸ôëxÈËÊ¿£¬ÈÎ·ÇÖÞÈË‡øÃñ´ó•þÎäÑb½M¿—Ãñ×åÖ®Ã¬îIÐä¡£®”ÂüµÂÀ­îIŒ§·´·N×å¸ôëxß\„Ó•r£¬ÄÏ·Ç·¨ÔºÔøÅÐÌŽËû¡¸ÃÜÖ\ÍÆ·­Õþ¸®¡¹µÈ×ïÃû£¬ÂüµÂÀ­Ç°áá¹²·þÐÌ27Äê°ë£¬ÆäÖÐÓÐ¼s18ÄêÔÚÁ_±¾u¶Èß^¡£<br><br>
@@ -155,6 +157,9 @@ Well, what you do makes me cry at night. You grownups say you love us. I challen
 
  
 ³ýÁË1993Äê«@µÃÖZØ –ºÍÆ½ª„ÒÔÍâ£¬ÂüµÂÀ­ß€ì¶1990Äê«@µÃÌKÂ“ÁÐŒŽºÍÆ½ª„£»1991Äê«@µÃÂ“ºÏ‡ø½Ì¿ÆÎÄ½M¿—îC°lµÄ¡¸žõ¸¥°££­²©ÍßÄá ŽÈ¡ºÍÆ½ª„¡¹£»1998Äê9ÔÂÃÀ‡ø‡ø•þîC°lµÄÃÀ‡ø¡¸‡ø•þ½ðª„¡¹ÒÔ¼°2000Äê8ÔÂÄÏ²¿·ÇÖÞ°lÕ¹¹²Í¬ówîC°lµÄ¡¸¿¨ñR¡¹„ìÕÂ[41]¡£<br><br>
+<a href= "pic04.html">ÈÕ±¾µÄÒ°ÐÄ</a><br><br>
+<a href= "pic05.html">ÈÕ±¾µÄÄÐÅ®</a><br><br>
+<a href= "pic06.html">Sorry£¡ÄÏ¾©Ê§ÊØ</a><br><br>
 
 
 ²¼¶ûÕ½Õù£¨Boer War£©ÊÇÓ¢¹úÈËºÍ²¼¶ûÈËÖ®¼äÎªÁËÕù¶áÄÏ·ÇÖ³ÃñµØ¶øÕ¹¿ªµÄÕ½Õù¡£²Î¿¼AsimovµÄ¡¶»ùµØ¡·ÏµÁÐ¡£<br><br>
@@ -267,97 +272,6 @@ MNUÊÇÒ»¸ö×¨ÃÅ¸ºÔðµÚ¾ÅÇøÊÂÎñµÄ»ú¹¹£¬Î¬¿âË¹×÷ÎªÕâËù»ú¹¹µÄ¹ÜÀíÈËÔ±£¬Ã¿ÌìµÄÉú»î¾ÍÊÇº
 ÂüµÂÀ­µÄÒ»Éú¾­Àú¹ýÌ«¶àµÄ¿àÍ´ÓëÕÛÄ¥£¬È»¶øÕâÒ»ÇÐ¶¼Ã»ÓÐ¸Ä±äËûÀÖ¹Û¡¢ÓÄÄ¬¡¢Æ½ºÍ¡¢¿íÈÝ¡¢¼á¶¨µÄ¸ß¹óÆ·ÖÊ¡£ËûÃ»ÓÐÒòÎªÖÖ×åÖ÷ÒåÕþÈ¨µÄÆÈº¦¶ø×ßÏò¼«¶Ë¡¢Ê©Õ¹±¨¸´£¬¶øÊÇ¼«Á¦ÎÓÐý¡¢´Ù½øºÍ½â£»ËûÃ»ÓÐÒòÎª³¤ÆÚ·ÇÈËµÄÇôÍ½ÉúÑÄ¶øÊ§È¥ÀíÖÇ¡¢·ÅÆúÏ£Íû£¬¶øÊÇ»ý¼«¶ÍÁ¶ÉíÌåµÈ´ýÊ¤ÀûµÄµ½À´£»ËûÃ»ÓÐÔÚÉùÍû¸ßÕÇÊ±Ì°ÁµÈ¨Î»¡¢ÖÐ±¥Ë½ÄÒ£¬¶øÊÇÔÚÒ»½ì×ÜÍ³ÈÎÂúºóÁ¢¼´ÍËÎ»£»ËûÃ»ÓÐÔÚÍËÐÝºó×øÏí¹¦Ãû£¬¶øÊÇ»ý¼«±¼×ßÎª´ÈÉÆÊÂÒµ¼ÌÐø¹±Ï×ÐÄÁ¦¡£ÂüµÂÀ­µÄÎ°´ó²»ÔÚÓÚËûËù»ñµÃµÄ½±Ïî£¬²»ÔÚÓÚÊÀ½ç¸÷¹úÕþÒªÃûÈË¶ÔËûµÄÔÞÑï£¬ÉõÖÁÒ²²»ÔÚÓÚËûÎªÄÏ·ÇÐÂÃñÖ÷ÕþÈ¨µÄµ®ÉúËù×öµÄ¹±Ï×£»¶øÔÚÓÚËûÆ½ºÍ¡¢¿íÈÝ¡¢ÀíÐÔµÄ¾«ÉñÕýÊÇÈ«ÈËÀàËùÓ¦¾ßÓÐµÄ¾«Éñ£¬Ëû´¦ÀíÃ¬¶ÜºÍ³åÍ»µÄÖÇ»ÛÓë·½·¨Ò²ÊÇÊÀ½ç¸÷µØµÄ³åÍ»Ë«·½ËùÓ¦Ñ§Ï°µÄ£¬¶øËûµÄÎÞË½¡¢·îÏ×Óë¼á¶¨µÄÆ·ÖÊ¸üÊÇºó´úÑ§Ï°µÄ°ñÑù¡£<br><br>
 
 ÀúÊ·ÊÇ²Ð¿áµÄ£¬µ«ÓÖÊÇ¹«Æ½µÄ¡£ÂüµÂÀ­µÄ¸ßÊÙÈÃËùÓÐÔø¾­µÄ×ï¶ñ¶¼ÔÚËûÃæÇ°µ¹ÏÂ¡£ÖÖ×å¸ôÀëÊ±ÆÚ£¬ËûÁ¬Ñ¡¾ÙÈ¨¶¼Ã»ÓÐ£¬µ«ËûÔÚ1994Äê³ÉÎªÁËÄÏ·Ç×ÜÍ³£»ÔÚÂÞ±¾µº×øÀÎÊ±£¬ËûÁ¬ÓüÓÑµÄ×ãÇò±ÈÈü¶¼²»ÄÜ¿´£¬µ«ËûÔÚ2010Äê¿´µ½ÁËÄÏ·ÇÊÀ½ç±­£»ÐÂÄÏ·Çµ®ÉúµÄ18Äêºó£¬ÉõÖÁÁ¬µ±Äê¿´ÊØËûµÄÓü×ä¶¼ÒÑ³ÉÁË¿Ý¹Ç£¬Ëû»¹ÔÚ½ÓÊÜ×ÅÊÀÈËµÄ×£¸£¡£Èç¹û»Æ¼Ò¾Ô»¹»î×Å£¬Ëû»òÐí»¹»áÎªÂüÀÏµù³ªÒ»Çú¡¶¹â»ÔËêÔÂ¡·£º¡°½ñÌìÖ»ÓÐ²ÐÁôµÄÇû¿Ç£¬Ó­½Ó¹â»ÔËêÔÂ£¬·çÓêÖÐ±§½ô×ÔÓÉ£¬Ò»Éú¾­¹ýáÝáåµÄÕõÔú£¬×ÔÐÅ¿É¸Ä±äÎ´À´£¬ÎÊË­ÓÖÄÜ×öµ½£¡¡±(ÎÄ/³Â¿ª)<br><br>
-
-
-Ö±²¼ÂÞÍÓÕù¶Ë<br><br>
-
-Î÷°àÑÀÕþ¸®Éù³Æ£¬ÔÚ±ØÒªµÄÇé¿öÏÂ£¬½«Í¬°¢¸ùÍ¢ÁªºÏÆðÀ´¶Ô¿¹Ó¢¹ú¡£µ«×ÜÌå¶øÑÔ£¬Î§ÈÆÖ±²¼ÂÞÍÓµÄÅ¼·¢ÐÔ¶ÔÖÅ²¢²»»áÒý±¬Õ½Õù¡£<br><br>
-
-×÷Õß£ºÕÅ¸Ù¸Ù À´Ô´£ºÄÏ·ç´° ÈÕÆÚ£º2013-11-24<br><br>
-
-
-¡¡10ÔÂ31ÈÕ·÷Ïþ£¬ÔÚ¾àÀëÖ±²¼ÂÞÍÓº£¸Û²»Ô¶´¦£¬Ò»ËÒÓ¢¹ú»Ê¼Òº£¾üµÄ²¹¸ø½¢Õý½ÓÊÜÖ±²¼ÂÞÍÓº£°¶¾¯ÎÀ¶ÓµÄ¼¸ËÒ²¹¸ø´¬µÄ²¹³ä¸øÑø¡£Í»È»£¬Î÷°àÑÀº£°¶¾¯ÎÀ¶ÓµÄÒ»ËÒÑ²ÂßÍ§´³Èë¾¯½äÏß£¬ÔÚÓ¢·½Êý´Îº°»°ÎÞÐ§ºó£¬Ë«·½Ç¹ÅÚÏà¶Ô£¬ÒýÆð²»Ð¡µÄÍâ½»·ç²¨¡£Á½¹úÔÚÖ±²¼ÂÞÍÓÖ÷È¨¹éÊôÎÊÌâÉÏµÄ¶·Õù£¬Æä¼¤ÁÒ³Ì¶È¿É¼ûÒ»°ß¡£µ«×ÜÌå¶øÑÔ£¬ÓÉÓÚË«·½¼°Å·ÃËµÄÎ£»ú¹Ü¿Ø»úÖÆ±È½Ï³ÉÊì£¬ÕâÖÖÅ¼·¢ÐÔ¶ÔÖÅ²¢²»»áÒý±¬Õ½Õù¡£
-<br><br>
-¡¡¡¡
- 
-¡¡¡¡¡°¹²¹Ü¡±·½°¸µÄÁ÷²ú<br><br>
-
-¡¡¡¡º£ÍâÁìµØÒ»Ö±ÆÄÁîÓ¢¹úÈË¾À½á¡£ÕâÐ©ÁìµØ´ó¶àÔ¶ÀëÓ¢¹ú±¾ÍÁ£¬¸ß¶È×ÔÖÎ£¬²»¹Ø±¾ÍÁÃñÉú£¬µ«ÓÉÓÚºÜ¶àÁìµØÎ»´¦º£ÉÏ½»Í¨Òª½ò£¬¶ÔÓ¢¹ú±£³Ö¹ú¼ÊÓ°ÏìÁ¦ÓÖÖÁ¹ØÖØÒª¡£Ö±²¼ÂÞÍÓ¾ÍÊÇÆäÒ»¡£<br><br>
-
-¡¡¡¡Ö±²¼ÂÞÍÓÊÇÒ»¸ö°ëµº£¬ÈýÃæ»·Ë®£¬Ö»ÓÐ±±ÃæÓëÎ÷°àÑÀ±¾ÍÁ½ÓÈÀ¡£¼øÓÚÖ±²¼ÂÞÍÓÌØÊâµÄµØÀíÎ»ÖÃºÍÖ±²¼ÂÞÍÓº£Ï¿14¹«Àï¿íµÄ»Æ½ðË®µÀ£¬Ó¢¹úÍõÊÒ³ÃÎ÷°àÑÀÏÝÈëÍõÎ»Õù¶áÄÚÕ½Ê±£¬ÅÉÎÞµÐ½¢¶ÓÓÚ1704Äê¶áµÃÖ±²¼ÂÞÍÓ°ëµº£¬²¢×îÖÕÓÚ1713Äê±ÆÆÈÎ÷°àÑÀÕþ¸®Ç©¶©¡¶ÎÚµÂÀÕÖ§ºÍÔ¼¡·£¬ÕýÊ½½«Ö±²¼ÂÞÍÓ°ëµº¸îÈÃ¸øÓ¢¹ú¡£ÑÓÐøÖÁ½ñ£¬¸ÃµØÈË¿ÚÔ¼3Íò£¨²»°üÀ¨Ó¢¹ú×¤¾ü£©£¬ÆäÖÐÓ¢¹úÈËÔ¼5000¡£<br><br>
-
-¡¡¡¡´ÓµØÔµÉÏ½²£¬Î÷°àÑÀÈËËµÖ±²¼ÂÞÍÓÊÇËûÃÇµÄÓÐÒ»¶¨µÀÀí¡£Ö±²¼ÂÞÍÓÎ»ÓÚÎ÷°àÑÀµÄ×îÄÏ¶Ë£¬ÓëÎ÷°àÑÀ±¾ÍÁÏàÁ¬£¬»ëÈ»Ò»Ìå£¬Æä¶àÊý¾ÓÃñÐÅ·îÌìÖ÷½Ì£¬Í¨ÓÃÎ÷°àÑÀÓï¡£Ðí¶àÎ÷°àÑÀÈË£¬°üÀ¨Ò»Ð©Õþ¸®¹ÙÔ±£¬¾õµÃ×Ô¼º¼ÒÃÅ¿ÚµÄµØ¶ù£¬ÔõÃ´»á±ä³ÉÈË¼ÒµÄµØÅÌÄØ£¿´Ó³£ÀíÉÏ½²£¬Ëµ²»¹ýÈ¥£¡ËùÒÔÔÚ1963Äê£¬Î÷°àÑÀÕþ¸®ÉÏËßÖÁÁªºÏ¹úÌØ±ðÎ¯Ô±»á£¬ÒªÇóÓ¢¹úÕþ¸®½«Ö±²¼ÂÞÍÓ¹é»¹¸øÎ÷°àÑÀ¡£ÁªºÏ¹úÒ»·½ËìÒªÇóÁ½¹ú¾ÍÖ±²¼ÂÞÍÓÎÊÌâ´ï³ÉÐ­Òé£¬ÒÔ½áÊø¸ÃµØµÄÖ³Ãñ×´Ì¬¡£µ«ÊÇÔÚ1967ÄêÈ«Ãñ¹«¾öÖÐ£¬Ö±²¼ÂÞÍÓ¾ÓÃñÒ»ÖÂÑ¡Ôñ¼ÌÐøÁôÔÚÓ¢¹ú¡£Ó¢¹úÕþ¸®»¶ÐÀÖ®Óà£¬Á¢·¨ÈÃÖ±²¼ÂÞÍÓ¸ß¶È×ÔÖÎ¡£<br><br>
-
-¡¡¡¡1969Äê£¬Î÷°àÑÀ¹Ø±ÕÁËÍ¨ÍùÖ±²¼ÂÞÍÓµÄ±ß¾³¿Ú°¶£¬³·³öÁËÐí¶àÀÍ¶¯Á¦£¬´ó´óÏ÷¼õÁËÍ¨ÍùÖ±²¼ÂÞÍÓµÄÔËÊäÍ¾¾¶£¬ÒÔÊ¾¶Ô¿¹¡£1975Äê£¬Î÷°àÑÀ¶À²ÃÕß·ðÀÊ¸ç²¡ËÀ£¬¸Ã¹ú¿ªÊ¼ÏòÎ÷·½Òé»áÃñÖ÷ÕþÖÎ¹ý¶É¡£1980Äê£¬¡¶ÀïË¹±¾ÌõÔ¼¡·µÄÇ©¶©£¬Ê¹µÃÓ¢¹úºÍÎ÷°àÑÀÍ¬ÒâÌ¸ÅÐ¡£Îª±íÉÆÒâ£¬Î÷°àÑÀÕþ¸®ÓÚ1982ÄêÖØ¿ªÍ¨ÍùÖ±²¼ÂÞÍÓµÄ±ß¾³¿Ú°¶¡£1984Äê£¬ÔÚ¡¶²¼Â³Èû¶ûÌõÔ¼¡·¾«ÉñµÄ¸ÐÕÙÏÂ£¬Ó¢¹úºÍÎ÷°àÑÀÕþ¸®Í¬Òâ¸øÓèÔÚÎ÷°àÑÀµÄÖ±²¼ÂÞÍÓÈËºÍÔÚÖ±²¼ÂÞÍÓµÄÎ÷°àÑÀÈËÍ¬µÈ´ýÓö£¬²¢ÇÒ³·Ïú±ß¾³¿Ú°¶£¬×ÔÓÉÍ¨ÐÐ¡£Ó¢¹úºÍÎ÷°àÑÀÕþ¸®ÔÚÖ±²¼ÂÞÍÓÎÊÌâÉÏÖð²½ÐÎ³É¹²Ê¶£¬ÓÐÒâ¹²Í¬¹ÜÀíÖ±²¼ÂÞÍÓ¡£<br><br>
-
-¡¡¡¡µ«ÊÇ£¬ÔÚ2002ÄêµÄÈ«Ãñ¹«¾öÖÐ£¬Ö±²¼ÂÞÍÓÈË¾Ü¾øÁËÁªºÏ¹ÜÀíµÄ½¨Òé£¬´Ó¶øÊ¹µÃÕâÒ»·½°¸×îÖÕÁ÷²ú¡£×Ô´ËÖ®ºó£¬Ó¢¹úºÍÎ÷°àÑÀÔÚÖ±²¼ÂÞÍÓÎÊÌâÉÏ¾ÍÔÙÒ²Ã»ÓÐÊµÖÊÐÔ½øÕ¹¡£Ë«·½´ó³³Ã»ÓÐ£¬Ð¡³³²»¶Ï£¬ÕâÖÖÇéÐÎÒ»Ö±³ÖÐøµ½½ñÄê7ÔÂµ×µÄ¡°Éºº÷½¸ÊÂ¼þ¡±¡£<br><br>
-
- 
-¡¡¡¡
-
-¡¡¡¡¡°Éºº÷½¸ÊÂ¼þ¡±<br><br>
-
-¡¡¡¡7ÔÂµ×£¬Ö±²¼ÂÞÍÓµØ·½Õþ¸®ÔÚÖÜ±ßË®Óò¶ÑÆöÁËÒ»Ð©»ìÄýÍÁ·½¿é£¬¾ÝËµÊÇÒª½¨ÈË¹¤Éºº÷½¸£¬ÒÔ±ãº£ÑóÉúÎïÔÚ´Ë·±ÑÜÉúÏ¢£¬×îÖÕÏëÔÚÕâÀï½¨Á¢Ò»¸öº£Ñó×ÔÈ»±£»¤Çø¡£ÌýÆðÀ´Í¦Õý³££¬È´Ôâµ½Î÷°àÑÀÕþ¸®µÄÇ¿ÁÒ·´¶Ô¡£ºóÕßÉù³ÆÄÇÊÇÎ÷°àÑÀµÄÁìº££¬Ö±²¼ÂÞÍÓÕþ¸®ÔÚÃ»ÓÐÈ¡µÃÎ÷°àÑÀÕþ¸®Ðí¿ÉµÄÌõ¼þÏÂ×ÔÐÐÆäÊÇ£¬ÊÇ¶ÔÎ÷°àÑÀµÄÇÖ·¸¡£ÁíÍâ£¬Î÷°àÑÀÕþ¸®Ö¸ÔðÈË¹¤Éºº÷½¸ÆÆ»µÉúÌ¬»·¾³£¬¶ÔÆäÓæÒµÒ²ÓÐÆÆ»µ×÷ÓÃ¡£<br><br>
-
-
-Îª±í¿¹Òé£¬Î÷°àÑÀÕþ¸®7ÔÂµ×Í»È»¼ÓÇ¿ÁË¶Ô¹ýÍùÎ÷°àÑÀ- Ö±²¼ÂÞÍÓ¿Ú°¶µÄ±ß¾³¼ì²é£¬µ¼ÖÂ½ø³öÖ±²¼ÂÞÍÓµÄ½»Í¨ÑÏÖØÌ±»¾£¬¡°Éºº÷½¸ÊÂ¼þ¡±ÕýÊ½±¬·¢¡£<br><br>
-
-¡¡¡¡Ö±²¼ÂÞÍÓ°ëµº×÷ÎªÓ¢¹úµÄÒ»²¿·Ö£¬²»ÊôÉê¸ùÇ©Ö¤Çø£¬¶øÎ÷°àÑÀÊÇÉê¸ùÇøµÄÒ»²¿·Ö£¬ËùÒÔ¶ÔÓÚ½ø³öÖ±²¼ÂÞÍÓµÄÈËÔ±ºÍ»õÎï£¬Î÷°àÑÀÊÇÓÐÈ¨½øÐÐ¼ì²éµÄ¡£µ«ÊÇ£¬ÕâÖÖ¼ì²é±ØÐëÊÊµ±£¬²»ÄÜÎ¥±³Å·ÃËµÄ·¨ÂÉ£¬ÈËÎªÖÆÔìÅ·ÃËÇøÄÚÍ¨ÐÐÉÏµÄ²»±ã¡£´ÓÕâ¸ö½Ç¶È½²£¬Î÷°àÑÀÕþ¸®¶ÔÖ±²¼ÂÞÍÓ¿Ú°¶µÄ±ß¼ì£¬Ã÷ÏÔ¹ýÓÚ¿Á¿Ì£¬²»·ûºÏÅ·ÃËµÄ¹æ¶¨¡£<br><br>
-
-¡¡¡¡¡°Éºº÷½¸ÊÂ¼þ¡±·¢Éúºó£¬Ó¢¹úÕþ¸®¾ÍÕâÒ»ÊÂ¼þÕýÊ½ÏòÎ÷°àÑÀ×¤Ó¢¹ú´óÊ¹Í¶Ëß£¬Ó¢¹úÍâÏàºÚ¸ñ¸øÎ÷°àÑÀÍâÏà´òÁËË½ÈËµç»°£¬Çé¿öÒ»¶È»ººÍ£¬Î÷°àÑÀÍ¨ÍùÖ±²¼ÂÞÍÓµÄ±ß¾³¼ì²éÒ²ËÉ³ÚÁËÏÂÀ´¡£¿ÉÊÇ£¬ÔÚËæºóÎ÷°àÑÀÒ»¼Ò±¨Ö½Ëù×öµÄ×¨·ÃÖÐ£¬Î÷°àÑÀÍâÏàÈ´ÁîÈËÒâÍâµØËµÒª½øÒ»²½¼ÓÇ¿¶ÔÖ±²¼ÂÞÍÓµÄ±ß¾³¿ØÖÆ£¬±ÈÈçÕ÷ÊÕÃ¿ÈË50Å·ÔªµÄ¡°¹ý¾³·Ñ¡±£¬¶ÔÓÚ·ÉÍùÖ±²¼ÂÞÍÓµÄ·É»ú¹Ø±ÕÁì¿ÕµÈ£¬³äÂú»ðÒ©Î¶£¬´Ó¶øÁîÐÎÊÆÔÙ¶È½ôÕÅ¡£<br><br>
-
-¡¡¡¡8ÔÂ5ÈÕ£¬Ó¢¹úÊ×Ïà¿¨Ã·Â×¹«¿ª±íÊ¾¼«¶È¹Ø×¢Ö±²¼ÂÞÍÓÊÂÌ¬µÄ·¢Õ¹¡£Å·ÖÞÀíÊÂ»áÒ²¶Ø´ÙÎ÷°àÑÀÔÚ½øÐÐ±ß¾³¿ØÖÆµÄÊ±ºò£¬±ØÐë×ñÑ­Å·ÃËµÄ·¨ÂÉ¡£8ÔÂ7ÈÕ£¬¿¨Ã·Â×ÓëÎ÷°àÑÀÊ×ÏàÀ­»ôÒÁ¾ÍÖ±²¼ÂÞÍÓµÄÎÊÌâ½øÐÐÁËµç»°½»Á÷£¬µ«¾ÝËµÌ¸»°²¢²»Óä¿ì¡£8ÔÂ9ÈÕ£¬Ò»ËÒ»Ê¼Òº£¾üµÄÁ½ÆÜ¹¥»÷½¢Ç°ÍùÖ±²¼ÂÞÍÓ¡£ËäÈ»Ó¢¹ú¹ú·À²¿Éù³ÆÕâÊÇÀýÐÐÑµÁ·£¬µ«ÔÚÎ÷°àÑÀÈËÑÛÀï£¬ÎäÁ¦ÍþÐ²µÄÓÃÒâÊÇÒçÓÚÑÔ±íµÄ¡£<br><br>
-
-¡¡¡¡»ùÓÚÓ¢¹úÕþ¸®µÄ·´Ó¦£¬Î÷°àÑÀÕþ¸®ÊÇÕë·æÏà¶Ô£¬Éù³Æ½«°ÑÕâÒ»ÎÊÌâÌá½»µ½ÁªºÏ¹ú°²Àí»á£¬²¢ËµÔÚ±ØÒªµÄÇé¿öÏÂ£¬½«Í¬°¢¸ùÍ¢ÁªºÏÆðÀ´£¬¶Ô¿¹Ó¢¹ú¡£<br><br>
-
-¡¡¡¡ÖÚËùÖÜÖª£¬Ó¢¹úºÍ°¢¸ùÍ¢ÔÚ1982ÄêÔø¾ÍÂíµºÎÊÌâ´ó´ò³öÊÖ£¬Ó¢¹úËäÈ»×îÖÕÈ¡Ê¤£¬È´ÁîÀ­ÃÀ¹ú¼ÒÊèÔ¶¡£Î÷°àÑÀÌá¼°°¢¸ùÍ¢£¬´Áµ½ÁËÓ¢¹úµÄÍ´´¦¡£×÷Îª·´Ó¦£¬°üÀ¨ÇýÖð½¢¡¢Ö±Éý»úº½Ä¸ÔÚÄÚµÄ»Ê¼Òº£¾ü±à¶ÓÏà¼Ì´Ó¸÷Ó¢¹úº£¾ü»ùµØ³ö·¢£¬Ç°ÍùÖ±²¼ÂÞÍÓ£¬ËµÊÇÀýÐÐÑµÁ·£¬µ«¡°Ïî×¯Îè½££¬ÒâÔÚÅæ¹«¡±£¡<br><br>
-
-¡¡¡¡8ÔÂ12ÈÕ£¬Ó¢¹úÕþ¸®Éù³Æ£¬ÕýÔÚ¿¼ÂÇ¶ÔÎ÷°àÑÀ²ÉÓÃÊ·ÎÞÇ°ÀýµÄ·¨ÂÉÊÖ¶Î£¬ÒÔº´ÎÀÓ¢¹úµÄ¹ú¼ÒÀûÒæ¡£9ÔÂµ×£¬Å·ÃËÅÉ³ö6ÈËµ÷²éÍÅÇ°ÍùÖ±²¼ÂÞÍÓ£¬´¦ÀíÁ½¹úÕþ¸®µÄÕù¶Ë¡£µ«µ÷²é»¹Ã»½áÊø£¬±ãÉÏÑÝÁËÎÄÕÂ¿ªÍ·µÄÒ»Ä»£¬Ó¢¡¢Î÷Á½¹ú¼¸ºõ²ÁÇ¹×ß»ð¡£ÖÁ´Ë£¬Õâ´ÎÓÉ¡°Éºº÷½¸ÊÂ¼þ¡±Òý·¢µÄÖ÷È¨Ä¦²Á£¬Ç÷ÓÚ°×ÈÈ»¯¡£<br><br>
-
-¡¡¡¡
-
-¡¡¡¡Ö±²¼ÂÞÍÓµÄÃüÔË<br><br>
-
-¡¡¡¡¹ØÓÚÕâ´ÎÖ±²¼ÂÞÍÓ³åÍ»£¬Ó¢¹úµÄÖ÷Á÷Ã½ÌåÈÏÎªÊÇÎ÷°àÑÀÕþ¸®Ð¡Ìâ´ó×ö£¬½èÌâ·¢»Ó¡£°´´ú±íÎ÷ÄÏÓ¢¸ñÀ¼ºÍÖ±²¼ÂÞÍÓÑ¡ÇøµÄ±£ÊØµ³ÒéÔ±¸£¿ËË¹µÄ»°Ëµ£¬Î÷°àÑÀÕþ¸®Ñ¡Ôñ¹ý¼¤ÐÐÎª£¬ÍêÈ«ÊÇÒòÎªÆ£ÓÚÓ¦¸¶¹úÄÚµÄÃ¬¶Ü£¬½èÒÔ×ªÒÆ¹úÄÚÈËÃñµÄÊÓÏß£»ËùÎ½µÄÆÆ»µº£Ñó»·¾³ºÍÓæÒµ×ÊÔ´£¬ÍêÈ«ÊÇÒ»¸ö½è¿Ú¡£<br><br>
-
-¡¡¡¡ÕâÖÖËµ·¨ÔÚÓ¢¹úÈËÖÐÓÐÒ»¶¨ÊÐ³¡¡£Å·Õ®Î£»ú±¬·¢ÒÔÀ´£¬Î÷°àÑÀ¹úÄÚµÄ½ðÈÚÏµÍ³¼¸ºõÆÆ²ú£¬ÒÔÖÁÓÚÔÚ2012 ÄêÎªÁË»ñµÃÅ·ÖÞÑëÐÐ1000ÒÚÅ·ÔªµÄ½ô¼±´û¿î£¬±»ÆÈ½ÓÊÜÁËºóÕß·Ç³£¿Á¿ÌµÄÌõ¼þ£¬ÔÚ¹úÄÚÀ÷ÐÐ½ôËõ²ÆÕþ£¬½á¹ûÊ§ÒµÂÊ¾Ó¸ß²»ÏÂ£¬È«¹úÆ½¾ùÊ§ÒµÂÊ³¬¹ý25%£¬ÄêÇáÈËÊ§ÒµÂÊ¸ß´ï50%£¡¼ÓÉÏÎ÷°àÑÀ¾­¼ÃÖÁ½ñÎÞºÃ×ª¼£Ïó£¬ÀÏ°ÙÐÕÐÄÖÐµÄÈÌÄÍÒÑ¾­½Ó½üÁÙ½çµã¡£ÔÚÕâÖÖÇé¿öÏÂ£¬Î÷°àÑÀÕþ¸®ÀûÓÃÖ±²¼ÂÞÍÓ³åÍ»×ªÒÆ¹úÄÚµÄÃ¬¶Ü£¬ÊÇ½²µÃ¹ýÈ¥µÄ¡£<br><br>
-
-
-µ«²»¹ÜÎ÷°àÑÀÕþ¸®Õâ´ÎµÄÕæÊµÒâÍ¼ÊÇÊ²Ã´£¬¼ÈÈ»ÌôÆðÁËÕâ¸öÊÂ¶Ë£¬×ÜµÃÓÐÒ»¸ö½â¾ö·½°¸¡£½ñÄêÕýÖµÖ±²¼ÂÞÍÓ³ÉÎªÓ¢¹úº£ÍâÁìµØµÄ300ÖÜÄê¼ÍÄî£¬Ó¢¹úºÍÎ÷°àÑÀ×÷Îª¸÷·½Ãæ½»Á÷Ê®·ÖÃÜÇÐµÄÁ½¸öÅ·ÃË´ó¹ú£¬¶¯Îä·½°¸¶ÔÆä¸÷×ÔÕþ¸®¶¼ÊÇ¡°²»¿ÉÑ¡Ïî¡±£¬ÒòÆäÃñÖÚ¶ÔÎ£»úÎÞ·¨»¯½âµÄÖ±¾õ¸ü¶à»áÊÇ±¾¹úÕþ¸®ÎÞÄÜ¶ø²»ÊÇÆäËû³ðÍâÀíÓÉ£¬ËùÒÔÁ½¹ú×îÖÕ»¹ÊÇ»á»Øµ½Ì¸ÅÐ×ÀÉÏ¡£<br><br>
-
-¡¡¡¡ÖÁÓÚÌ¸ÅÐ»á·ñ×îÖÕ½â¾öÖ±²¼ÂÞÍÓµÄÖ÷È¨¹éÊôÎÊÌâ£¬Ë­¶¼²»±§ÉÝÍû£¬ÒòÎªÁ½¹ú¿ÚÍ·ÉÏ¶¼Ã»ÓÐÈÃ²½µÄÒâË¼¡£µ«ÊÇ£¬Î÷°àÑÀÕâ´ÎÁÙÊ±¼ÓÇ¿µÄ±ß¾³¼ì²é£¬Ì¸ÅÐÖ®ºóÓ¦¸ÃÊÇ»á³·ÏúµÄ¡£ÎªÁË½ø³öÖ±²¼ÂÞÍÓ£¬Ò»´Î¾ÍÒªÔÚ±ß¼ì¿Ú°¶µÈÉÏÁùÆß¸öÐ¡Ê±£¬¶ÔÓÚÄÇÐ©ÔÚÁ½±ß¹¤×÷£¬Ã¿ÌìÐèÒªÀ´»ØÅÜµÄÈË£¬Ë­ÄÜÊÜµÃÁË£¿¼´Ê¹Î÷°àÑÀÕþ¸®¸ù±¾²»ÔÚºõÄÇÐ©Ö±²¼ÂÞÍÓÈË£¬ÄÇÐ©ÔÚÖ±²¼ÂÞÍÓ¹¤×÷µÄÎ÷°àÑÀÈËÔõÃ´°ì£¿Î÷°àÑÀ¹úÄÚµÄÃ¬¶ÜÒÑ¾­Ê®·Ö¼âÈñ£¬Î÷°àÑÀÕþ¸®²»»á×öÄÇÐ©¼¤Å­¸ü¶àÈË²»ÂúµÄÊÂÇé¡£ÔÙËµ£¬ÕâÒ²Ã÷ÏÔÓÐÎ¥Å·ÃËÇøÄÚ×ÔÓÉÁ÷¶¯µÄ¾«Éñ£¬°ØÁÖÇ½ÒÑ¾­µ¹Ëú24ÖÜÄê£¨11ÔÂ9ÈÕ£©ÁË£¬Î÷°àÑÀµÄÁÙÊ±±ß¼ì³ÙÔçÒ²»á³·µô£¬À­»ôÒÁÕþ¸®²»¹ýÊÇÔÚµÈÒ»¸öÌ¨½×ÏÂ°ÕÁË¡£<br><br>
-
-¡¡¡¡ÆäÊµ£¬Ö±²¼ÂÞÍÓµÄÖ÷È¨¹éÊô²»½ö½öÊÇÓ¢¹úºÍÎ÷°àÑÀÁ½·½µÄÊÂÇé£¬Ö±²¼ÂÞÍÓÈËÃñÒ²ÓÐÈ¨Ñ¡Ôñ×Ô¼ºµÄÃüÔË¡£Õ½ºó¶àÄêÀ´£¬Ö±²¼ÂÞÍÓµÄÈËÃñÒ»Ö±Ï£Íû¼ÌÐø½ÓÊÜÓ¢¹úÍ³ÖÎ£¬²¢ÔÚ¶à´Î¹«Í¶ÖÐÒÔ¾ø¶Ô¶àÊýÆ±Ö§³ÖÓ¢¹úµÄÍ³ÖÎ¡£´ÓÕâ¸ö½Ç¶È½²£¬ÈÎºÎÍâ¼ÓµÄÁ¦Á¿Àë¿ªÄÚÒòÕâ¸öÖ÷µ¼ÒòËØ£¬ÊÇÆð²»ÁË¶à´ó×÷ÓÃµÄ¡£<br><br>
-
-
- Èý°ÙÄêµÄÕù³³<br><br>
-
-
-
-×÷Õß:Î¬ÖÛ<br><br>
-
-ÄÚÈÝÀ´Ô´£º¡¶ÖÇ×åGQ¡·  
-
- 
-
-2013Äê10ÔÂ21ÈÕ<br><br>
-
-
-Ö±²¼ÂÞÍÓ¾Í±ä³ÉÁËÓ¢µÛ¹úÒ»¸ö²»¿É·ÅÆúµÄÏóÕ÷¡£¶øÎ÷°àÑÀ£¬ËäÈ»Èý°ÙÄêÀ´´ÓÎ´Íü¼ÇÊÕ¸´£¨Ö±²¼ÂÞÍÓÒÑ³ÉÎªÅ·ÖÞ×îºóÒ»¿éÖ³ÃñµØ£¬¸üÔöÌíÁËÎ÷°àÑÀÈËµÄ³ÜÈè¸Ð£©£¬µ«ËûÃÇÍ¬ÑùÒ²»á¼æ¹ËÏÖÊµ¡£<br><br>
-
-ÒòÎªÒ»ÈºÎ÷°àÑÀÓæÃñ¿¹ÒéÓ¢¹úÔÚÖ±²¼ÂÞÍÓÐÂ½¨µÄÈË¹¤µº½¸ÏÞÖÆÁËÆä²¶ÓãÈ¨£¬Á½¹úÖ®¼äÒÑÕù³³ÁËºÃ¼¸¸öÐÇÆÚ¡£Ë«·½Îª´ËÓÖÊÇ·ÉÀ´·ÉÈ¥µÄÍâ½»¿¹ÒéÓëÉùÃ÷£¬ÓÖÊÇ¸÷ÖÖ¸ø¶Ô·½ÖÆÔìÂé·³µÄÐ¡¶¯×÷£¬Ó¢¹úÉõÖÁ»¹ÅÉ³öÁË»Ê¼Òº£¾üµÄ»¤ÎÀ½¢£¬Ò»¸±¡°°Ñµ¶½£ÅªµÃ¸Â¸Â×÷Ïì¡±µÄÀÏÅÉµÛ¹úÖ÷Òå×÷·ç¡£²»¹ý£¬ÔÚ±íÃæµÄ½ôÕÅÏÂ£¬ËûÃÇÏë±ØÒ²Ôç¾Í±Ë´ËÐÄÖª¶ÇÃ÷£¬±Ï¾¹ËûÃÇÒÑÎªÕâ¸öµ¯ÍèÖ®µØÕù³³ÁËÈý°ÙÄêÖ®¾Ã¡£<br><br>
-
-¡¡¡¡Ö±²¼ÂÞÍÓÊÇÕæÕýµÄ¡°µ¯ÍèÖ®µØ¡±¡ª¡ªËü»¹²»¼°±±´óºÍÇå»ªÐ£Ô°¼ÓÆðÀ´ÄÇÃ´´ó¡£µ«ËüÈ´ÏòÀ´ÊÇÕ½ÂÔÒªµØ£¬ÎÞÂÛµ±ÄêÂù×åÕ÷·þ±±·Ç£¬»¹ÊÇ°¢À­²®ÈËÕ÷·þÎ÷°àÑÀ£¬¶¼ÒÔ´ËÎªÇ°ÉÚÌø°å¡£µ«ËüµÄÖØÒªÐÔ£¬Ò²ÊÇÖ±µ½½ü´ú²ÅÖð½¥Í¹ÏÔ¡£ÒòÎªÔÚ´ËÖ®Ç°ÎÞÂÛÊÇåÈÌ«»ù¡¢ÂÞÂí»¹ÊÇ°¢À­²®µÛ¹ú£¬ÆäÁìÍÁ¶¼ºá¿çÖ±²¼ÂÞÍÓº£Ï¿Á½°¶µÄÅ··ÇÁ½ÖÞ;Ö±µ½1501ÄêÎ÷°àÑÀÔÚÕ÷·þÔË¶¯ÖÐÕýÊ½½«ÆäÄÉÈë°æÍ¼£¬Ö±²¼ÂÞÍÓ²ÅÓÐÊ·ÒÔÀ´µÚÒ»´Î³ÉÁËÒ»ÌõÕþÖÎ±ß½çÉÏµÄÇ°ÉÚ¡£ËµÊµ»°£¬Ó¢¹úÈË±ÈÎ÷°àÑÀÈË¸üÇå³þµØ¿´µ½ÁËËüµÄ·Ç·²ÒâÒå£ºÕ¼ÁìÕâ¸öº£áµ£¬»Ê¼Òº£¾ü½¢¶Ó¾ÍÄÜ·âËøµØÖÐº££¬È·±£Ó¢µÛ¹úÔÚµØÖÐº£¡¢ÖÐ¶«ÄËÖÁÕû¸ö¶«·½µÄÀûÒæ¡£ÕâÒ²ÊÇÎªºÎ×Ô´ÓÓ¢¹úÓÚ1704ÄêÔÚÎ÷°àÑÀÍõÎ»¼Ì³ÐÕ½ÖÐ¶áÈ¡´ËµØºó¾ÍÔÙ²»¿ÏËÉ¿ÚÁË¡ª¡ªÔÚÖÕ½áÕâ³¡Õ½ÕùµÄ1712ÄêÎÚµÂÀÕÖ§ÌõÔ¼ÖÐ£¬Ó¢¹úÒÔ³ÐÈÏ²¨ÅÔ¼Ò×å³öÈÎÎ÷°àÑÀ¹úÍõÎª½»»»£¬»ñµÃÁËÖ±²¼ÂÞÍÓµÄÓÀ¾ÃËùÓÐÈ¨¡£<br><br>
-
-¡¡¡¡¾À·×¼¸ºõ´ÓÒ»¿ªÊ¼¾Í³öÏÖÁË¡£Î÷°àÑÀÔÚ´Ëºó²»¶ÏÄ±Çó¶á»ØÊ§µØ¡£µ±±±ÃÀÊ®ÈýÖ³ÃñµØÆðÀ´·´¿¹Ó¢¹úÊ±£¬Î÷°àÑÀ¹úÍõ²éÀíÈýÊÀ¾ö¶¨¾Ó¼äµ÷Í££¬Ìõ¼þÊÇÒÔÖ±²¼ÂÞÍÓÎª»Ø±¨£¬½á¹ûÔâÓ¢¹úÕþ¸®¶ÏÈ»¾Ü¾ø£¬²éÀíÈýÊÀËìÏòÓ¢¹úÐûÕ½£¬Ëû¡°¶ÔÓ¢ÊôÃÀÖÞÖ³ÃñµØµÄÎ´À´ºÁ²»¹ØÐÄ£¬µ«ÈÏÎªÖ±²¼ÂÞÍÓº£Ï¿ºÍÃ×Åµ¿¨µºÖµµÃÒ»Õ½¡£¡±(John J. Norwich¡¶µØÖÐº£Ê·¡·)Æä½á¹û£¬Î÷°àÑÀÓë·¨¹úµÄ·´Ó¢Í¬ÃË´Ù³ÉÁËÃÀ¹úµÄµ®Éú¡£¶þÊ®Äêºó£¬Î÷°àÑÀÎªÁË×ÔÉíÀûÒæ£¬²»¹ËÒ»ÇÐÒâÊ¶ÐÎÌ¬ºÍÔ­Ôò(µ±Ê±Î÷°àÑÀÍõÊÒÓë±»ÍÆ·­µÄ·¨¹úÍõÊÒÍ¬Êô²¨ÅÔ¼Ò×å)£¬¾¹Óë·¨À¼Î÷¹²ºÍ¹ú½áÃË£¬Ö÷ÒªÔ­ÒòÖ®Ò»¾ÍÊÇÓ¢¹úÕ¼Áì×ÅÖ±²¼ÂÞÍÓ¡£ºÜ³¤Ò»¶ÎÊ±¼äÀï£¬·¨¹úºÍÎ÷°àÑÀ·´Ó¢½áÃËµÄ»ù´¡Ö®Ò»£¬ÏòÀ´ÊÇ·¨¹úÖ§³ÖÎ÷°àÑÀÊÕ¸´Ö±²¼ÂÞÍÓ£¬µ±Ê±Ò»Î»·¨¹úÍâ½»¹ÙÌ¹ÂÊ¶ø²»ÎÞ·í´ÌµØËµ£º¡°¹é»¹Ö±²¼ÂÞÍÓ·ûºÏÓ¢¹úµÄÀûÒæ£¬ÎÒÃÇµÄÀûÒæÊÇÀÖ¼ûÓ¢¹ú±£ÓÐÕâ¿éÁìÍÁ£¬ÕâÑù·¨¹ú¶ÔÎ÷°àÑÀÀ´Ëµ¾ÍÊ¼ÖÕÊÇ±Ø²»¿ÉÉÙµÄÁË¡£¡±<br><br>
-
-¡¡¡¡·ÅÆúÖ±²¼ÂÞÍÓ£¬Ó¢¹úÈ·ÊµÒ²²»ÊÇÃ»¿¼ÂÇ¹ý¡£°¢¿Ë¶ÙÑ«¾ôÔøËµ£¬Ó¢µÛ¹úÈÏÊ¶µ½Ö±²¼ÂÞÍÓµÄÖØÒªÐÔÒ²ÓÐ¸ö¹ý³Ì£¬ËüÔøÁù´ÎÄÃÕâµ¯ÍèÖ®µØÀ´×ö½»Ò×¡£ÔÚÕ¼Áì¸Õ¹ý¼¸Ê®ÄêÊ±£¬Ëü»¹ÔøÏëÒÔ¡°ÊÊµ±¼Û¸ñ¡±·ÅÆúÖ±²¼ÂÞÍÓ£¬µ«1782ÄêCharles James Fox Ç¿ÁÒ·´¶Ô£¬ÈÏÎª¡°Ö±²¼ÂÞÍÓÒªÈûÊÇ¹ú¼Ò×îÖØÒªµÄ²Æ²úÖ®Ò»¡­¡­Èç¹û½«Ö±²¼ÂÞÍÓÒªÈû·ÅÆú¸øÎ÷°àÑÀ£¬µØÖÐº£¶ÔËûÃÇÀ´Ëµ½«±ä³ÉÒ»¸ö¿ÉÒÔËæÒâº½ÐÐµÄ³ØÌÁ£¬ËûÃÇ¿ÉÒÔ²»ÊÜ¿ØÖÆ»òÖÆÖ¹µØÐÐ¶¯¡£ÈôÊÇÈ¥Õâ¸öµØ·½£¬ÄÇÐ©ÓëµØÖÐº£½ÓÈÀµÄÅ·ÖÞ¹ú¼Ò½«²»ÔÙÖ¸ÍûÄãÎ¬³ÖÄÇÆ¬º£µÄ×ÔÓÉº½ÐÐ;²»ÄÜÊ¹ËüÔÚÄãµÄÁ¦Á¿ÏÂÆð×÷ÓÃ£¬Äã±ã²»ÄÜÔÙÆÚ´ý»áÓÐÃËÓÑ¡£¡±ÓÚÊÇ£¬Ö±²¼ÂÞÍÓ¾Í±ä³ÉÁËÓ¢µÛ¹úÒ»¸ö²»¿É·ÅÆúµÄÏóÕ÷£¬Æä¼ÛÖµ¾Í²»ÔÙÖ»ÊÇÄÇ¼¸Æ½·½¹«ÀïµÄÍÁµØºÍº£ÓòÁË¡£<br><br>
-
-¡¡¡¡¶øÎ÷°àÑÀ£¬ËäÈ»Èý°ÙÄêÀ´´ÓÎ´Íü¼ÇÊÕ¸´(ÓÈÆäÊ±ÖÁ½ñÈÕ£¬Ö±²¼ÂÞÍÓÒÑ³ÉÎªÅ·ÖÞ×îºóÒ»¿éÖ³ÃñµØ£¬¸üÔöÌíÁËÎ÷°àÑÀÈËµÄ³ÜÈè¸Ð)£¬µ«ËûÃÇÍ¬ÑùÒ²»á¼æ¹ËÏÖÊµ¡£1940Äê¶¬£¬ÔÚ¶ÔÓ¢×÷Õ½µÄº£Ê¨¼Æ»®Ê§°Üºó£¬Ï£ÌØÀÕÒ»¶ÈÏë°ÑÎ÷°àÑÀÍÏÏÂË®À´¹²Í¬¶Ô¸¶Ó¢¹ú£¬Ëû¿ª³öµÄÌõ¼þ¾ÍÊÇ°ïÎ÷°àÑÀÊÕ¸´Ö±²¼ÂÞÍÓ£¬²¢Ðû³ÆÕâÊÂ¹ØÎ÷°àÑÀÈËÃñµÄÈÙÓþ¡£È»¶ø·ðÀÊ¸çÕþ¸®²»ÎªËù¶¯£¬ËüºÜÇå³þ×Ô¼ºÎÞÂÛÔÚ¾«ÉñºÍÎïÖÊÉÏ¾ùÎÞ·¨ÓëÓ¢¹ú¿¹ºâ£¬ÓÚÊÇÌá³öÒ»ÏµÁÐ²»¿ÉÄÜµÄ²ÎÕ½Ìõ¼þ£º·ðÀÊ¸çÌá³ö²ÎÕ½Ìõ¼þ£º40Íò¶ÖÐ¡Âó¡¢Õ½ÕùËùÐèµÄÒ»ÇÐÎï×Ê¡¢²»ÐíµÂ¹úÊ¿±øÕ¼ÁìÖ±²¼ÂÞÍÓ¡¢×ªÈÃÄ¦Âå¸çÒÔ¼°×î²»¿ÉÄÜÊµÏÖµÄ¡ª¡ªÖ»ÓÐµ±µÂ¾üÕ¼ÁìÓ¢¹úÊ±²Å²ÎÕ½¡£<br><br>
-
-¡¡¡¡¶þÕ½ÒÔÀ´£¬Ó¢µÛ¹úÒÑÉ¥Ê§ÁËÈ«ÇòµÄÐí¶àÖ³ÃñµØÓë¾Ýµã£¬µ«Ö±²¼ÂÞÍÓÈ´Ê¼ÖÕÔÚËüÊÖÖÐ¡£ÓÉÓÚ½üÔÚåë³ß£¬Ö±²¼ÂÞÍÓ×ÔÈ»²»ÃâÒ²ÊÜÎ÷°àÑÀÓ°Ïì¡ª¡ª1929ÄêËü¾Í½«ÐÐ³µ¸ÄÎªÓÒ²àÐÐÊ»£¬ÓëÎ÷°àÑÀÏàÒ»ÖÂ¡£È»¶øÔÚ1967ÄêµÄ¹«ÃñÍ¶Æ±ÖÐ£¬¶àÊýÈËÈÔÔÞ³É¼ÌÐø×öÓ¢¹ú¹«Ãñ£¬Õâ²»½öÒòÎªÓ¢¹úÔÚµ±µØÔçÒÑÓÐ´óÁ¿ÒÆÃñ£¬Ò²ÒòÎªÓ¢¹úÔÚ¾­¼ÃÉÏ±ÈÎ÷°àÑÀºÃ¶àÁË£¬µ±Ó¢¹ú¹«Ãñ×ÔÈ»¸üÓÐÀû¡£µ±1968Äê¶¬ÁªºÏ¹ú´ó»áÍ¨¹ý2429ºÅ¾öÒé£¬ÒªÇóÓ¢¹úÔÚÊ®¸öÔÂÄÚ½«Ö±²¼ÂÞÍÓ¹é»¹¸øÎ÷°àÑÀÊ±£¬Ó¢¹ú×÷³öÇ¿Ó²ÐûÊ¾£¬²»½öÈÎÃüÒ»Î»º£¾üÉÏ½«Îªµ±µØ×Ü¶½£¬»¹½«ËÄËÒ¼«µØºÅºËÇ±Í§¿ªµ½µ±µØº£Óò¡£¾ÍÏñÕâ´Î£¬Ó¢¹úÈËÒ²µ÷À´¾ü½¢£¬Ðû³ÆÎ÷°àÑÀÈËÒªÌ¸¿ÉÒÔ£¬µ«Ö»ÄÜÌ¸Ì¸²¶ÓãÈ¨ÎÊÌâ¡£<br><br>
-
-¡¡¡¡ÓÉ´Ë¿´À´£¬Á½¹úÔÚµ±ÏÂµÄÕù³³Ò²¾Í²¢²»Ê²Ã´ÐÂÏÊ£¬ÓÖÄÜÖ¸ÍûÓÐÊ²Ã´ÐÂµÄÍ»ÆÆÄØ?°´ÑÛÏÂµÄÐÎÊÆ£¬Î÷°àÑÀÏëÊÕ¸´Ê§µØ£¬³ý·ÇÓ¢¹úÔ¸Òâ·ÅÆú;¶ø²»¾­Ò»Õ½ÒªÓ¢¹ú·ÅÆú£¬Ôò³ý·ÇÊÇÖ±²¼ÂÞÍÓ¶ÔËüÔÙÎÞ¼ÛÖµ¡£ÔÚ19ÊÀ¼ÍÄ©µÛ¹úÕù°ÔµÄÄê´ú£¬Ëø¶¨ÊÀ½ç¸ñ¾ÖµÄÎå¸öÕ½ÂÔÒªÈû£º¶à·ð¶û¡¢Ö±²¼ÂÞÍÓ¡¢ºÃÍû½Ç¡¢ÐÂ¼ÓÆÂ¡¢ÑÇÀúÉ½´ó¸Û£¬È«¶¼ÕÆ¿ØÔÚÓ¢µÛ¹úÊÖÖÐ£¬¶ø½ñ£¬ÔÚÓ¢¹ú±¾ÍÁÖ®ÍâÔòÖ»Ê£Ö±²¼ÂÞÍÓ»¹ÔÚÓ¢¹úÈËÊÖÖÐÁË£¬¶ø¼´±ãËü£¬È·Êµ¼ÛÖµÒ²ÔçÒÑÏà¶ÔÏÂ½µ¡£µ«ÕâÊÇÓ¢µÛ¹ú×îºóµÄ²ÐÓàÆ¬¶Î£¬¼´Ê¹ÎÞ¹ØÏóÕ÷£¬ÖÁÉÙÒ²µÃ°ÑËüÂô¸öºÃ¼ÛÇ®£¬Èç½ñÀ¿ÔÚÊÖÀï×Ü²»Ì«»µ¡£·´ÕýÒÑ³³ÁËÈý°ÙÄêÁË£¬ÔÙ³³ËüÈý°ÙÄêÓÖÈçºÎ?Ö±²¼ÂÞÍÓ²»ÊÇÏã¸Û¡£<br><br>
 
 
 
