--- a/pic01.html
+++ b/pic01.html
@@ -53,6 +53,10 @@
 	<br><br>事实就是事实（Orgasm）<br><br>
 	以前封闭国门，害怕穆斯林朝觐（Hajj）。后来禁止学外语，焚书坑儒。以前重庆高校有民谣说“外语学院的婊子”，果然不错。外语学院思想开放，性也开放！<br><br>
 	文革期间，王沪宁没有下乡精通法语、万钢下乡搞定德语、刘亚洲参军学会英语。所以，要至少一门外语。最差也要像李嘉诚一样学点粤语吧？HongKong News Agora<br><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
+<a href= "pic03.html">各行其是而已</a><br><br>
 	</font>
 
 	
