--- a/pic03.html
+++ b/pic03.html
@@ -50,9 +50,13 @@
 	</center>
 
 	<br><br>你干你的、我说我的。平等互利、互不干涉内政。<br><br>
-	La vie d'Adèle 《阿黛尔的生活》<br><br>
+La vie d'Adèle 《阿黛尔的生活》<br><br>
 Blue Is a Hot Color (2013)《蓝色是一种暖色调》<br><br>
 阿布戴·柯西胥导演，蕾雅·赛杜、阿黛尔·艾克阿切波洛斯主演改编自法国作家朱莉·马洛的漫画《蓝色是一种暖色调》，故事主角是15岁的女孩阿黛尔，她有一个帅气的男友托马斯，但托马斯并没有走进她的心。某晚在街头意外遇到一个美丽的蓝发女孩后，阿黛尔一见钟情下怦然心动。她们的靠近让阿黛尔的青春期一下变得复杂起来。<br><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
+
 	</font>
 
 	
