--- a/pic06.html
+++ b/pic06.html
@@ -49,7 +49,12 @@
 
 	</center>
 
-	<br><br>
+	<br><br><a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
 	</font>
 
 	
