--- a/story01.html
+++ b/story01.html
@@ -31,7 +31,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<center>
 	<br><a href= "home.html">·µ»ØÖ÷Ò³</a><br>
 	<font size=7>
-	Ä¿Â¼±êÌâÀ¸Ä¿1&nbsp; Ä£°å<br><br>
+	VogueµÄÁ÷ÐÐ<br><br>
 	</font>	
 	</center>
 
@@ -68,8 +68,12 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 ¿´À´Ê¥µ®ÀÏÈË½ñÄê¶Ô¡°ºÃÅ®º¢¡±Óë¡°»µÅ®º¢¡±Ò»ÊÓÍ¬ÈÊ¡£¡°»µÅ®º¢¡±Rihanna(ÀÙ¹þÄÈ)ÌáÇ°´ÓVersace¡¢Stella McCartney¡¢PradaÓëAlexander McQueenµÈÆ·ÅÆµÃµ½ÁËÐÂ¼¾µÄÊ±ÉÐÊ¥µ®ÀñÎï£¬¸ü¸½ÓÐÉè¼ÆÊ¦ÃÇÇ×±ÊÐ´µÄ¿¨Æ¬£¡ <br><br>
 
 RihannaÆÈÇÐµØÔÚInstagramÉÏÓë´ó¼Ò·ÖÏíÁËËýÈÇÈË¼µ¶ÊµÄÀñÎï£¬²¢Í¬Ê±ÒÔ¼ò¶ÌµÄÎÄ×Ö»Ø¸´ÁËËýÃÇµÄÊÖÐ´ÎÊºò¡£<br><br>
+<a href= "link02.html">House of Cards¡¶Ö½ÅÆÎÝ¡·</a><br><br>
+<a href= "pic01.html">Ìì¸³ÈËÈ¨ÄÐÅ®Æ½µÈ </a><br><br>
+<a href= "pic02.html">ÊÂÊµ¾ÍÊÇÊÂÊµ£¨Orgasm£©</a><br><br>
+<a href= "pic03.html">¸÷ÐÐÆäÊÇ¶øÒÑ</a><br><br>
+<a href= "link03.html">Severn¡¯s speech before the UN Earth Summit in Rio</a><br><br>
 
- 
 
 Èý´óÉÝ³ÞÆ·¼¯ÍÅÆ·ÅÆÕù¶áÕ½<br><br>
 
@@ -88,11 +92,13 @@ RihannaÆÈÇÐµØÔÚInstagramÉÏÓë´ó¼Ò·ÖÏíÁËËýÈÇÈË¼µ¶ÊµÄÀñÎï£¬²¢Í¬Ê±ÒÔ¼ò¶ÌµÄÎÄ×Ö»Ø¸´ÁË
  Ïà±ÈÇ°ÃæÁ½Î»£¬ÕâÁ½Äê¿ªÔÆ¼¯ÍÅÔÚÇÀ¶áÆ·ÅÆ·½ÃæÓÐ¹»ÓÃÐÄ£¬³ýÁË½ñÄêÊÕ¹ºµÄChristopher KaneºÍPomellato£¬È¥ÄêÄêµ×»¹ÊÕ¹ºÁËÖÐ¹úÖé±¦Æ·ÅÆQeelin¡£Í¬Ê±ËüÃÇ»¹ºÍÃÀ¹úÅ¦Ô¼ParsonsÉè¼ÆÑ§ÔººÏ×÷¾Ù°ìÊ±×°Éè¼Æ´óÈü£¬ÒâÔÚÅàÑøÐÂÈñÉè¼ÆÊ¦¡£<br><br>
 
 ÓëµÚÒ»²¨µÄÆ·ÅÆÇÀ¹º´óÕ½Ïà±È£¬Èç½ñÈý´óÉÝ³ÞÆ·¼¯ÍÅÒÑ¾­¶ÔÊÕ¹ºÆ·ÅÆÓÐÁËÐÂµÄË¼Â·£¬ËüÃÇ±äµÃ±È½Ï½÷É÷¡£¶Ô³ÉÊìÆ·ÅÆÖ»ÄÜ¿´×¼Ê±»ú£¬¶øÕâ¸öÊ±»úÎ´±Ø»áÀ´£»¶ÔÓÚÐÂÈñÆ·ÅÆ£¬Ö»ÓÐ¿´×¼ÁËÆä·¢Õ¹Ç°¾°²Å»áÏÂÊÖ£¬ÄÇÐ©CFDA¡¢British Fashion Awards×î¼ÑÐÂÈñÉè¼ÆÊ¦¶¼»áÊÇÄ¿±ê¡£Ë­ÇÀµÃÑ¸ËÙÉÏÉýµÄÃ÷ÈÕÐÂÐÇ£¬Ë­¾ÍÄÜÔÚÎ´À´µÄÉÝ³ÞÆ·ÊÐ³¡ÖÐ»ñµÃ¸ü¶àÐÂµÄÔö³¤¼«£¬Ò²¾Í¸üÀûÓÚ¼¯ÍÅµÄÁ¼ºÃ·¢Õ¹¡£LVMHÓÐ»ù´¡ÓÅÊÆ£¬RichemontºÍKeringÔòÒª¶à³öÒ»·ÝÁ¦ÁË¡£<br><br>
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
 ×îºÃµÄÀñÎï <br><br>the greatest gift of all<br><br>
 
  2013 Äê 12 ÔÂ 05 ÈÕ  ÏþÑ©	<br><br>
 ÖÐ¹úÈË×Ô¹Å½²¾¿¡°ÀñÉÐÍùÀ´¡±£¬Î÷·½ÈËÒ²½«µÃÌåµØËÍÀñÊÓÎª½ÌÑø¡£ÎÒÊÕµ½µÄÀ´×ÔÍâ¹úÅóÓÑµÄÀñÎï×î¶àµÄÊÇÏÊ»¨ºÍÀ¯Öò£»ÎÒËÍ¸øÍâ¹úÅóÓÑ×î¶àµÄÀñÎïÊÇ¿ê×ÓºÍË¿³ñÖÆÆ·¡£ÕâÑùµÄÀñÎï°²È«ÌÖÏ²£¬²»»áÓÐ´í£¬Ò²²»»áÓÐÌ«¶àµÄ¾ªÏ²¡£ÎÒ¸üÏ²»¶ÓÐÐÄµÄÀñÎï¡£ËüÓëÀñÎï±¾ÉíµÄ¼Û¸ñ¡¢¼ÛÖµÎÞ¹Ø£¬ºÍÐÄË¼ÓÐ¹Ø£¬´ø×Å¡°½­ÄÏÎÞËùÓÐ£¬ÁÄ¼ÄÒ»Ö¦´º¡±µÄ¹ÒÄî¡£¡¶ÓÅÑÅ¡·Ð¡ÊéÀïÓÐÒ»Æª¹ØÓÚÀñÎïµÄÎÄÕÂ£¬ÊÇÉí±ßÕæÊµµÄ¹ÊÊÂ¡£ÎÄÖÐÌáµ½Ò»¸öÅ®ÓÑ£¬Ëý´ÓÐ¡ÓÐ¸ö¹ÅóÝÃÎ£¬ºóÀ´¼ÞÈËÉúÍÞ£¬³¯¾ÅÍíÎå£¬ÃÎ¾Í³ÉÁËÃÎ¶øÒÑ¡£30ËêÉúÈÕÊ±£¬ÕÉ·òµÄÀñÎïÊÇÒ»Ì¨¹ÅóÝ£¬Å®ÓÑµ±³¡ÂäÀá¡£ÔÚÁµ°®½á»é¶àÄêÖ®ºó£¬»¹¿Ï°ÑÅ®ÈËÐÄÍ·ÄÇÐ©²»ÇÐÊµ¼ÊµÄÉÙÅ®Ê±´úµÄ¶à³îÉÆ¸Ðµ±»ØÊÂ¶ùµÄÄÐÈË£¬Ïàµ±ÖµµÃ¹ÄÀø¡£¶¼Ëµ×êÊ¯ÊÇÅ®ÈËµÄ×î°®£¬ÆäÊµÅ®ÈË¸üÔÚÒâÕâÖÖÇéÉîÒâ³¤Ö»ÓÐÄã¶®ÎÒµÄÀñÎï¡£ÄÇÒ»Äê£¬Ë«°ûÌ¥ÂäµØ£¬²ú¼Ù½áÊøÎÒÖØÐÂ¿ªÊ¼¾©»¦±¼²¨¡£¸Õµ±ÂèÂè£¬ÄÑÒÔÈÌÊÜ³ö²î¼û²»µ½ÍÞµÄÍ´£¬ÔçÍíÎÅ²»µ½Å®¶ùÃÇµÄÄÌÏãÎ¶£¬ÑÛÀá¾ÍÒªµôÏÂÀ´¡£Ò»Ìì£¬ÊÕµ½ÅóÓÑËÍµÄÀñÎï£¬ÊÇÒ»Æ¿Ä¸×Ó°´Ä¦¸àºÍÒ»¶ÔÐ¡Ð¡µÄÓ¤¶ùÍÞÍÞ£¬Ò»¸öÍÞÍÞÔÚ·ÛÉ«ñßñÙÀïÐ¦ÃÐÃÐ£¬Ò»¸öÍÞÍÞÔÚ°×É«ñßñÙÀïÕÅ×ÅÐ¡×ìºÃÏñÔÚËµ¡°ÂèÂèÎÒ¶öÁË¡±¡£¿¨Æ¬ÉÏµÄÎÄ×ÖÎÒÖÁ½ñ¼ÇÒäÓÌÐÂ£ºÑ©½ã½ã£¬°´Ä¦¸à´ø»Ø±±¾©ÓÃ£¬Á½¸öÐ¡ÍÞÍÞÅãÄãÔÚÉÏº£¡£ÔÚ²©¿ÍÉÏ¿´µ½ÁËÀÖÀÖÃÇµÄÕÕÆ¬£¬ÕÒµ½Á½¸öÉñËÆËýÃÇµÄÍÞÍÞ£¬Äã¾Íµ±Å®¶ùÃÇÔÚÉí±ß¡­¡­ºóÀ´ÕâÁ½¸öÐ¡ÍÞÍÞÒ»Ö±ÔÚÉÏº£Åã×ÅÎÒ¡£ÎÒ°ÑËýÃÇ·ÅÔÚÉÏº£Ð¡ÎÑµÄ´²Í·£¬ºÜ¶à¸öË¼ÄîÅ®¶ùµÄÒ¹Íí£¬ÉµÉµµØºÍËýÃÇËµ»°£¬Ö±µ½½ñÄê²Å°ÑÁ½¸öñßñÙÍÞÍÞ´ø»Ø±±¾©¸øÅ®¶ùÃÇÍæ¡£Ôø¾­ÓÐ¸öºÍÎÒÒ»ÑùÏàÐÅÍ¯»°µÄÅóÓÑ¹ýÉúÈÕ£¬ÎÒÔÚ¾É»õÊÐ³¡ÉÏÌÔµ½Ò»¸öÎÒÃÇÐ¡Ê±ºòÒ»ÆðÍæ¹ýµÄÌúÆ¤»ð³µ¡£°ÑËýµÄÃû×ÖºÍËýÓ×Ê±µÄ¿ÚÍ·ìøË¢ÔÚÁË³µÉíÉÏ£¬ÓÖÓÃËýµÄÉú³½×öÁË»ð³µ³µÅÆ£»ÔÙ¸½Ò»ÕÅÉúÈÕºØ¿¨£¬¿¨Æ¬ÉÏ×¨ÎªËýÐ´ÁËÒ»¶ÎÃÔÄãÍ¯»°¹ÊÊÂ¡£ËýÄÇÌìËµ£ºÎÒ½ñÌì±»Í¯»°ÁË£¬Ì«¿ªÐÄ¡£ÎÒ±ÈËý¸ü¿ªÐÄ¡£ÊÖ×öµÄÀñÆ·¡¢ÊÖÐ´µÄºØ¿¨£¬´øÓÐÊÖµÄÎÂ¶È£¬ÊÇÈËÓëÈËÖ®¼ä£¬²»¿ÉÌæ´úµÄÎÂÅ¯¡£¶øÏñ¡°Í¯»°¡±ÕâÑù²»ÄÇÃ´Êµ¼Ê¶øÃÀºÃµÄÐ¡ÐÅÄî£¬×Ô¼ºÏàÐÅ£¬²ÅÄÜ¸ÐÈ¾±ðÈË£»ÓÖÒòÎª±ðÈËµÄÐÊÐÊÏàÏ§£¬ÈÃ×Ô¼º¸ü¼Ó¼á¶¨µØÏàÐÅ¡£ÕâÊÇÒ»ÖÖ¿ìÀÖµÄÂÖ»Ø¡£¡°Îï¡±×ÖÇ°ÃæÓÐÁË¡°Àñ¡±£¬²Å³ÉÆäÎª¡°ÀñÎï¡±£¬·ñÔòÎïÖ»ÊÇ¶«Î÷¡£ËÍÀñÊÇËÍÐÄ£¬Í¨¹ýÒ»¼þ¡°¶«Î÷¡±£¬ÈÃÅóÓÑ¸ÐÊÜµ½ÄãµÄ¹ØÐÄºÍ°®ÐÄ£¬ÊÇºÜÐÒ¸£µÄÊÂ¡£<br><br>
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
 ×ÚÈøÈÊ²¨ÇÐÌ¸»°Â¼<br><br>
 Ò»Óð°´£ºÓ¢ÎÄ²¿·ÖÀ´×ÔÌÚÑ¶¶Ô×ÚÈøÈÊ²¨ÇÐµÄ×¨·Ã£¬Ð¡ÌâÄ¿Ïµ¶ÏË®Ëù¼Ó¡£<br><br>
@@ -122,6 +128,7 @@ Whether it¡¯s a degenerated time or not, it shouldn¡¯t matter. Degenerated times
 Áù¡¢×ÔÂÉ<br><br>
 
 From the top of my head I would say discipline is necessary. When I say discipline I am not just talking about Buddhist discipline, I¡¯m talking about even very mundane but profound things such as eating at home three times a week, at least. It makes you healthy, it means you are not spending money so you have more in your wallet, so you are happier, You are healthy, wealthy and you are happy.<br><br>
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
 ÎÒ°®ÍÁºÀ½ð<br><br>
 
@@ -158,6 +165,14 @@ Blue Is a Hot Color (2013)¡¶À¶É«ÊÇÒ»ÖÖÅ¯É«µ÷¡·<br><br>
 °¢²¼´÷¡¤¿ÂÎ÷ñãµ¼ÑÝ£¬ÀÙÑÅ¡¤Èü¶Å¡¢°¢÷ì¶û¡¤°¬¿Ë°¢ÇÐ²¨ÂåË¹Ö÷ÑÝ¸Ä±à×Ô·¨¹ú×÷¼ÒÖìÀò¡¤ÂíÂåµÄÂþ»­¡¶À¶É«ÊÇÒ»ÖÖÅ¯É«µ÷¡·£¬¹ÊÊÂÖ÷½ÇÊÇ15ËêµÄÅ®º¢°¢÷ì¶û£¬ËýÓÐÒ»¸öË§ÆøµÄÄÐÓÑÍÐÂíË¹£¬µ«ÍÐÂíË¹²¢Ã»ÓÐ×ß½øËýµÄÐÄ¡£Ä³ÍíÔÚ½ÖÍ·ÒâÍâÓöµ½Ò»¸öÃÀÀöµÄÀ¶·¢Å®º¢ºó£¬°¢÷ì¶ûÒ»¼ûÖÓÇéÏÂâñÈ»ÐÄ¶¯¡£ËýÃÇµÄ¿¿½üÈÃ°¢÷ì¶ûµÄÇà´ºÆÚÒ»ÏÂ±äµÃ¸´ÔÓÆðÀ´¡£<br><br>
 
 ¸ÃÆ¬»ñµÃ±¬ÅïºÃÆÀ£¬ÔÚê©ÄÉµçÓ°½Ú»ñµÃ3.6·ÖµÄÊ·ÉÏ×î¸ß³¡¿¯ÆÀ·Ö£¬²¢×îÖÕÄÃÏÂ×î¸ß½±½ð×Øéµ½±¡ª¡ª¾¡¹Ü±»ÊÓÎª³ß¶È×î´óµÄÅ®Í¬ÐÔÁµÌâ²ÄµçÓ°£¬¾¡¹ÜÆ¬³¤³¤´ïÈý¸öÐ¡Ê±£¬¾¡¹ÜÆÀÎ¯»áÖ÷Ï¯ÊÇ¹ÛÄî±£ÊØµÄÊ·µÙÎÄ-Ë¹Æ¤¶û²®¸ñ£¬ËüµÄ»ñ½±»¹ÊÇËµÃ÷Ó°Æ¬×ã¹»Õðº³ÈËÐÄ¡£<br><br>
+<a href= "link02.html">House of Cards¡¶Ö½ÅÆÎÝ¡·</a><br><br>
+
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
+<a href= "pic01.html">Ìì¸³ÈËÈ¨ÄÐÅ®Æ½µÈ </a><br><br>
+<a href= "pic02.html">ÊÂÊµ¾ÍÊÇÊÂÊµ£¨Orgasm£©</a><br><br>
+<a href= "pic03.html">¸÷ÐÐÆäÊÇ¶øÒÑ</a><br><br>
+<a href= "link03.html">Severn¡¯s speech before the UN Earth Summit in Rio</a><br><br>
+
 
 ·¨¹úÐÂÈñÅ®ÐÇÀÙÑÅ¡¤Èü¶Å (Lea Seydoux) ºÍAdele ExarchopoulosÈÕÇ°¹²Í¬ÑÝÒïÁËMiuMiu2014Ôç´º¶È¼ÙÏµÁÐ¹ã¸æ´óÆ¬£¬ÕâÁ½Î»Å®ÐÇÔÚ½ñÄêê©ÄÉµçÓ°½Ú×î¼ÑÓ°Æ¬¡¶°¢÷ì¶ûµÄÉú»î¡·ÖÐÓÐ¹ýÏãÑÞÉú¶¯µÄÍ¬ÐÔÇé°®±íÑÝ¡£Òò³É¹¦³öÑÝÄ³¸öÐÔ¸Ð½ÇÉ«Õ¹ÏÖ³ö·Ç·²÷ÈÁ¦£¬½ø¶øÊÜÑû³ÉÎªÆ·ÅÆ´úÑÔÈËµÄÅ®ÐÇ²»ÔÚÉÙÊý£¬±ÈÈç³öÑÝÁË¡¶±äÐÎ½ð¸Õ3¡·µÄÂÞÜç¡¤ºàÍ¢¶Ù-»³ÌØÀò£¨Rosie Huntington-Whiteley£©¡¢ÔÚ¡¶Ï·ÃÎ°ÍÀè¡·ÖÐ´óµ¨ÑÝ³öµÄÒÁÍÞ¡¤¸ñÁÖ£¨Eva Green£©µÈµÈ¡£²»·Á´ÓËýÃÇ¾«²ÊµÄ¹ã¸æ´óÆ¬ºÍÐÔ¸Ð¾çÕÕÖÐ£¬È¥Ìå»áÆä»ðÈÈ·çÇé¡£<br><br>
 
@@ -187,7 +202,8 @@ Lea SeydouxºÍAdele ExarchopoulosÔøÔÚê©ÄÉ»ñ½±Ó°Æ¬¡¶°¢÷ì¶ûµÄÉú»î¡·ÖÐ³öÑÝÒ»¶ÔÍ¬ÐÔ°®
 ÃÀ¹ú¾ç×÷¼ÒÒÁÍÞ ¶÷Ë¹ÀÖ£¨Eve Ensler£©£¨The Vagina Monologues£©Ïàµ±Ç¿º·¡£×î½ü±»±±¾©Íâ¹úÓï´óÑ§£¨ÒÔÏÂ¼ò³Æ¡°±±Íâ¡±£©Ó¢ÓïÑ§ÔºµÄÑ§Éú°áÉÏÎèÌ¨£¬³ÉÎªÅ®È¨µÄÐûÑÔ¡£×ÔÈ»£¬ÖÐ¹úµÄÎ±¾ý×ÓÎÀµÀÊ¿²»ÃâºÈÎåßºÁù£¬Èç´ËÔÆÔÆ¡£µ«ºÁÎÞÒÉÎÊ£¬Å®ÐÔÓÐÈ¨Àû........<br><br>
 
 µ±È»£¬ÍâÓïÊÇ»ö¸ù¡£ËùÒÔ£¬Ñ§Ð£Òª¼õÉÙÍâÓï½ÌÓý£¬ÊµÏÖÈ«·â±Õ¡£ÒªÖªµÀ£¬µ±ÄêÃ÷ÇåÔø½ûÖ¹ÄÂË¹ÁÖÈ¥Mecca¡¢µÚÒ»ÅúÃÀÑ§Éú¿ÉÄÜ±»ÍÚÑÛ¡¢Ñ§Ó¢ÃÀ·¨µÄ¶«Îâ´óÑ§·¨Ñ§Ôº±ÏÒµÉú±»ÈÏÎªÊÇ¡°²»¿É¸ÄÔì¡±¡£<br><br>
-
+<a href= "pic04.html">ÈÕ±¾µÄÒ°ÐÄ</a><br><br>
+<a href= "pic05.html">ÈÕ±¾µÄÄÐÅ®</a><br><br>
 ³ÂÒãÈÃ¶ÀÅ®²»ÉÏ½ÖÏÂÏç¶øÑ§Ó¢Óï£¬ÁõÑÇÖÞ»áÓ¢Óï£¬ÕÅÎå³£Ò²Òª´ó¼ÒÑ§ºÃÓ¢ÎÄ¡£<br><br>
 Íõ»¦Äþ£ºÎÄ¸ï¿ÉÒÔ¡°²¡¼Ù¡±²»ÏÂÏçÔÚ¼Ò×ÔÑ§¶øºóÔÚÉÏº£½ø¹¤³§Ñ§Í½£¬1974Äê19Ëê±»×÷Îª¡°¹¤Å©±øÑ§Ô±¡±ÍÆ¼öµ½»ª¶«Ê¦·¶´óÑ§Î÷ÓïÏµ£¨ÉÏº£Ê¦·¶´óÑ§¸ÉÐ£ÍâÓïÅàÑµ°à£©Ñ§Ï°·¨Óï£¨Robespierre£©£¬´ÓÊ¦¡¶×Ê±¾ÂÛ¡·³ÂÆäÈË£¬Ï²»¶Äá²É£¨Nietzsche£©£¬¿á°®¶ÁÊé¡£93Äê¸´µ©´ó×¨±çÂÛ½¯²ý½¨¡£Íõ»¦Äþ±»³ÆÎªÖÐ¹úµÚÒ»ÖÇÄÒ¡¢ÐÂ±£ÊØ£¨Conservative£©Ö÷Òå½Ì¸¸¡¢ÕþÖÎ»¯×±Ê¦£¨Spin Doctor, Play Doctor, Juris Doctor£©¡£¸ê±´¶û£¨Goebbels£©£¬´÷¼¾ÌÕ»òKarl Rove¡£Â¬ÅæÄþÊÇObamaµÄÌú¸çÃÇ£¬µ«ÖÐ¹ú±³¾°ÈÃËû²»ÄÜ½øÈëºËÐÄ¶øÖ»ÄÜ×ö°×¹¬ÄÚ¸óÃØÊé³¤£¨Cabinet Secretary£©¡£Õâ°ãµÍÉùÏÂÆø£¬Ö»ÓÐÎÒ¹úºÓÄÏÈË×öµÃ³öÀ´¡£ÈËÎÄÉç¿ÆÇ·ÕËÌ«¶à¡£¹ãÖÝÖ´ÐÅÖÐÑ§¸ßÖÐ£¬Ò»¸öÅ®Í¬Ñ§Ï²»¶ÎÄ¿Æ²¢ÒªÈ¥¸Û´óÑ§·¨ÂÉ»ò¾­¼Ã£¬µ«Ã»ÓÐÑ¡ÎÄ¿Æ°à¡£Ñ¡Ö´ÐÅÊÇÒòÎªÓ¢ÓïºÃ£¨Å®Ð££©£¬µ«Í¼Êé¹Ý£¨Libraey£©Ã»ÓÐÔ­°æ×¨ÒµÊé¿É¶Á¡£<br><br>
 
@@ -243,6 +259,7 @@ Lea SeydouxºÍAdele ExarchopoulosÔøÔÚê©ÄÉ»ñ½±Ó°Æ¬¡¶°¢÷ì¶ûµÄÉú»î¡·ÖÐ³öÑÝÒ»¶ÔÍ¬ÐÔ°®
 ¡¡¡¡ÈË×÷ÎªËùÓÐ²¸Èé¶¯ÎïÖÐ½öÕ¼4%µÄÒ»·òÒ»ÆÞµÄÎïÖÖ£¬²¢ÇÒ½«ÕâÖÖ»éÅäÌåÖÆÉÏÉýµ½ÁËµÀµÂºÍÎÄ»¯µÄ¸ß¶È£¬ÕâÖÐ¼äÊÇ¿Ë·þÁË¶à´óµÄÊÞÐÔºÍ±¾ÄÜ°¡¡£<br><br>
 
 
+<a href= "link02.html">House of Cards¡¶Ö½ÅÆÎÝ¡·</a><br><br>
 
 7´óÆ·ÅÆÁªÊÖÍÆ³ö¹«Òæ¹ã¸æ·´¶Ô·ÂÃ°ÉÝ³ÞÆ·<br><br>
 
@@ -384,6 +401,7 @@ Vogue¶À¼Ò£ºRoberto CavalliµÄÃ×À¼Ê±×°ÖÜ
 
 
 
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
 
 
@@ -459,6 +477,7 @@ Olympia Le-Tan£¨µã»÷²é¿´Ðã³¡Ê¢¿ö£©ÏòÀ´ÔÚÐã³¡Ñ¡Ö·ÉÏºÜÊÇÔÚÐÐ¡£Õâ´ÎËý°ÑÎÒÃÇ´øµ½ÁË°Í
 
 <br><br>
 
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
 
 °ÍÀèÊ±×°ÖÜÕýÊ½À­¿ªá¡Ä»£¬Ò»ÈçÒÔÍùËü»áÊÇËÄ¸öÊ±×°ÖÜµÄµÄ¸ß³±¡£Ä¿Ç°ÎªÖ¹£¬Å¦Ô¼¡¢Â×¶ØºÍÃ×À¼ÎªÎÒÃÇ³ÊÏÖµÄ³±Á÷Ç÷ÊÆ»¹±È½Ï·ÖÉ¢£¬¾ö¶¨Ã÷Äê´ºÏÄµÄÖ÷ÒªÁ÷ÐÐÇ÷ÊÆÕâ¸öÖØÈÎ½«ÂäÔÚ°ÍÀèÍ·ÉÏ¡£
@@ -640,6 +659,7 @@ AltuzarraµÄÅ¦Ô¼Ê±×°ÖÜÐãºóÉú»î
 <br><br>
 ¶ÔÁË£¬´ó¼Ò¿ÉÄÜ²»ÖªµÀÎÒÂèÂèKarenÊÇÃÀ¼®»ªÈË£¬ÎÒ¿´¹ý²»ÉÙ»ªÓïµçÓ°£¬ËüÃÇÒ²¶ÔÎÒÆÄÓÐÓ°Ïì£¬ ±ÈÈçËµÍõ¼ÒÎÀµÄ¡¶»¨ÑùÄê»ª¡·¾ÍÒ»Ö±ÎªÎÒµÄÊ±×°Éè¼Æ´øÀ´ÎÞÏÞÁé¸Ð¡£AltuzarraÆ·ÅÆÏÖÔÚºÍÁ¬¿¨·ð¡¢Joyce¡¢ÉÏº£¾«Æ·µêLe LutinºÍThe Villa¶¼ÓÐºÜ½ôÃÜµÄÁªÏµ£¬Ï£ÍûÒÔºóÓÐ¸ü¶àµÄÖÐ¹úÏû·ÑÕß¿ÉÒÔ¿´µ½ÎÒµÄÉè¼Æ¡£ÎÒ¸üÏ£ÍûµÄÊÇ¿ÉÒÔÀ´µ½ÖÐ¹ú£¬ÒÔµØµÀµÄÖÐ¹úÉç»á»·¾³Îª±³¾°À´ÁË½âÖÐ¹úÅ®ÈË £¬ÏàÐÅÕâÑùÎÒ»áµÃµ½ºÜ¶àÁé¸Ð¡£
 <br><br>
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
 Rag & BoneµÄÅ¦Ô¼Ê±×°ÖÜÐãºóÉú»î
 <br><br>
@@ -715,6 +735,7 @@ By Maya Singer<br><br>
 <br><br>
 ¿É´©´÷¿Æ¼¼²úÆ·À´ÊÆÐÚÐÚ£¬²»½ö´óÓÐ¿ÉÄÜ¡°±Æ¡±µçÄÔ¡¢ÖÇÄÜÊÖ»ú¡°ÍËÎ»¡±£¬ÔÚ¿Æ¼¼ÁìÓòÏÆÆð¡°¸Ä³¯»»´ú¡±£»ÁíÒ»·½Ãæ£¬ËüÃÇÒ²¸ø´«Í³ÉÝ³ÞÆ·ÏúÊÛ´øÀ´Ç°ËùÎ´ÓÐµÄ»úÓöºÍÌôÕ½¡£ÄÇÐ©ÒÔ¡°¾«ÃÜ»úÐ¾¡±ºÍ°º¹ó²ÄÖÊÔÚ±íÒµ°ÎµÃÉÏ°ÙÄêÍ·³ïµÄÃû±í£¬ÔÚÖÇÄÜÊÖ±íµÄ¡°ÆæÏ®¡±ÏÂÊÇ·ñ»¹ÄÜ¼ÌÐøÎ¨ÎÒ¶À×ð£¿Ã»ÓÐÒº¾§ÆÁ¡¢Ã»ÓÐÖÇÄÜºË£¬¿ÉÄÜ¶¼²»¹»×Ê¸ñµ±It Bag£¿ÄÜÅÄÉãÊÓÆµ¡¢ÉÏÍøµÄÖÇÄÜÑÛ¾µ²ÅÊÇ½«À´µÄÖ÷Á÷£¿ÔÚ¡°ÐÈ·çÑªÓê¡±Ö®Ç°£¬ÉÝ³ÞÆ·´óÅÆ¶ùÒ²Ó¦µ±½è¼øAppleµÄ¡°ÍÚÇ½½Å¡±ÊÖ¶Î£¬×¥½ôÈ¥¿Æ¼¼½çÕÐ±øÂòÂí£¡
 <br><br>
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
 ÎÞÊ±ÉÐ²»ÐÔ¸Ð
 <br><br>
@@ -730,7 +751,9 @@ Tom ford¾ÍÊÇÓÃ¡°ÐÔ¸Ð¡±Õâ°ÑÀûÆ÷£¬Õü¾ÈÁËGucci£¬ÈÃÕâ¸öÆ·ÅÆ»À·¢ÁËÐÂµÄ»îÁ¦¡£ÔÚËûµ±Ê±Ö
 ²»¹ý£¬¼´Ê¹ÐÔ¸Ð³ÉÎªÊ±ÉÐ±Ø±¸µÄÓªÏúÊÖ¶Î£¬Ò²³£³£»áÓÐÊ§ÀûµÄÇé¿ö·¢Éú¡£ÀýÈçÃÀ¹ú¾­µäÐÝÏÐÆ·ÅÆAbercrombie & Fitch¾ÍÊÇÐÔ¸ÐÓªÏúµÄµäÐÍ´ú±í£¬ÓÐÊý¾Ý±íÃ÷Ëü¼´Ê¹¹ÜÓÃÐÔ¸ÐÕÐÊý£¬µ«ÊÇÓ¯Àû×´¿öÈ´Ã»ÓÐÒÔÇ°ºÃ¡£ÎÒÃÇ¶¼ÖªµÀAbercrombie & FitchÃ¿´Î¿ªµê»î¶¯ÉÏ£¬¶¼»áÇëÀ´´óÅúÐÔ¸Ð¼¡ÈâÄÐÄ££¬ÅÅÅÅÕ¾ÉõÖÁÔÚ³ÇÖÐÑ²ÓÎ£¬×¬×ãÈËÆø£¬ÕâÃ´¶àÐÔ¸ÐÄÐÄ£ÓÈÆäÊÇ¶ÔÅ®ÐÔÏû·ÑÕßÀ´Ëµ¸üÊÇÄÑµÖÓÕ»ó¡£<br><br>
  µ«ÊÇÕâÖÖÐÔ¸ÐÓªÏúÊÖ¶ÎÎ´±Ø¾Í´øÀ´ÁËÕæÊµµÄÏúÊÛÒµ¼¨£¬Abercrombie & Fitch½üÁ½ÄêÀ´µÄÏúÊÛÇé¿öÈ«¶¼ÊÇ»µÏûÏ¢¡£½ØÖÁ2013Äê5ÔÂ4ÈÕµÄÒ»¼¾¶È£¬Abercrombie &Fitch Co.ÏúÊÛ¶îÎª8.388ÒÚÃÀÔª£¬±ÈÈ¥ÄêÍ¬ÆÚ9.212ÒÚÃÀÔªÏÂ½µ8.9%¡£ÆäÖÐÃÀ¹úÏúÊÛÏÂ»¬17%ÖÁ5.349ÒÚÃÀÔª£¬º£ÍâÏúÊÛÔö³¤10%£¬´ïµ½3.039ÒÚÃÀÔª£»°üÀ¨µç×ÓÉÌÎñµÄDTCÏúÊÛÏÂ½µ10%ÖÁ1.327ÒÚÃÀÔª¡£Í¬µêÏúÊÛ´ó·ù¼õÉÙ15%£¬ÆäÖÐÃÀ¹úºÍº£Íâ·Ö±ðÏÂ½µ14%ºÍ16%¡£<br><br>
 Abercrombie & FitchµÄÀý×ÓÊÇ·ñËµÃ÷Ê±ÉÐ½ç¹ÜÓÃµÄÐÔ¸ÐÊÖ¶ÎÒÑ¾­Ê§Ð§ÁËÄØ£¿ÆäÊµ²»È»£¬ÐÔ¸ÐÓªÏúÔÚÊ±ÉÐ½çÓÀÔ¶ÊÜÓÃ¡£Èç¹ûËµÊ±ÉÐÊÇÒ»µÀÃÀÎ¶µÄ²ËëÈµÄ»°£¬ÄÇÃ´ÐÔ¸Ð¾ÍÊÇÑÎ£¬Ã»ÓÐÁËÑÎ£¬Ê±ÉÐÕâµÀ²Ë¾Í»áµ­È»ÎÞÎ¶¡£µ«ÊÇÐÔ¸ÐÖ»ÊÇ×é³ÉÕâµÀÃÀÎ¶²ËëÈµÄÒ»ÖÖ¡°µ÷ÁÏ¡±£¬È±Ê§ÁËÆäËû¡°µ÷ÁÏ¡±£¬ÒÀÈ»ÉÕ²»³öÒ»ÅÌºÃ²Ë£¬Abercrombie & FitchµÄÎÊÌâ¾Í³öÔÚÆäËûµÄ¡°µ÷ÁÏ¡±ÉÏ¡£ÐÔ¸ÐÓªÏú±¾Éí²¢Ã»ÓÐ´í¡£<br><br>
-
+<a href= "pic01.html">Ìì¸³ÈËÈ¨ÄÐÅ®Æ½µÈ </a><br><br>
+<a href= "pic02.html">ÊÂÊµ¾ÍÊÇÊÂÊµ£¨Orgasm£©</a><br><br>
+<a href= "pic03.html">¸÷ÐÐÆäÊÇ¶øÒÑ</a><br><br>
 µ±Ê±×°ÓöÉÏ¸ß¿Æ¼¼<br><br>
 
 ×÷Õß£ºStella Ê±¼ä£º2013Äê4ÔÂ10ÈÕ ÄÚÈÝÀ´Ô´£ºVOGUEÊ±ÉÐÍø <br><br>
@@ -767,6 +790,7 @@ Abercrombie & FitchµÄÀý×ÓÊÇ·ñËµÃ÷Ê±ÉÐ½ç¹ÜÓÃµÄÐÔ¸ÐÊÖ¶ÎÒÑ¾­Ê§Ð§ÁËÄØ£¿ÆäÊµ²»È»£¬ÐÔ¸
 <br><br>
 Æ²¿ª»·¾³²»¹Ü£¬·ÅÑÛÍûÈ¥£¬ÄãÒ²Ðí¾Í»á·¢ÏÖÊ±×°ÖÜÀïÄÇÀï¸Õ×ß¹ýÐãµÄ·þ×°ºÍÊÎÆ·¾ÍÒÑ¾­³öÏÖÔÚÁËÈËÃÇµÄÑÛÖÐ£¬Äã»á·¢Éú´í¾õ£¬ÄÑµÀÎÒÊÇÕ¾ÔÚÁË Jardin des Tuileries (½ÛÔ°)µÄÃÅ¿Ú£¿
 <br><br>
+<a href= "link02.html">House of Cards¡¶Ö½ÅÆÎÝ¡·</a><br><br>
 
 ÓÐÈË¶¢ÉÏÄãµÄÂ·ÓÉÆ÷ÁË
 <br><br>
@@ -874,8 +898,14 @@ Larry PageµÄÑÝ½²Æ½¾²¶¯ÈË¡£ËûÓÐÁ½¾ä»°ÈÃÎÒÓ¡ÏóÉî¿Ì£º1¡¢ÎÒÃÇÓ¦¸ÃÈ¥´´ÔìÄÇÐ©²»´æÔÚµÄ¶
 <br><br>
 ÏÖÈç½ñ£¬²»ÔÊÐíº¢×ÓÊ¹ÓÃ Facebook ÒâÎ¶×ÅÊ¹ËûÃÇ¹ÂÁ¢£¬ÈÃËûÃÇ¾õµÃ×Ô¼ºÊÇ¸ö¾ÖÍâÈË¡£×öµ½Æ½ºâ¶Ô´ý²ÅÊÇ×îºÃµÄ·½·¨£¬Æ©ÈçÎªº¢×ÓÃÇÌá¹©¶àÑù»¯µÄÑ¡Ôñ£¬ÔË¶¯£¬ÒôÀÖ»òÕßÊÇÆäËüÖÖÀàµÄ°®ºÃ¡£°Â°ÍÂíµÄ×ö·¨ÊÇÕýÈ·µÄ£¬ËûµÄÅ®¶ùÄêÁä·Ç³£Ð¡£¬ËûËù°çÑÝµÄÉç»á½ÇÉ«Ò²ÊÇºÜÖØÒªµÄ£¬Ëû±ØÐë¶Å¾øÈÎºÎÍÅÌå´ÓËûÅ®¶ùµÄÏßÉÏ¸üÐÂµÃÖªËûµÄÒ»ÇÐÏûÏ¢¡£µ«°Â°ÍÂíÊÇÒ»¸ö¹ú¼ÒµÄ×ÜÍ³£¡ÆäËûµÄ¸¸Ä¸ÐèÒªºÍ×Ô¼ºµÄº¢×ÓÃæ¶ÔÃæµÄ½»Ì¸È¥¼õÉÙËûÃÇÉÏFacebookµÄÆµÂÊ£¬ÕâÑù×öÒ²»áÆðµ½Ò»ÑùµÄÐ§¹û£¬Õâ²ÅÊÇÐÐÖ®ÓÐÐ§µÄ·½·¨¡£
 <br><br>
+<a href= "pic01.html">Ìì¸³ÈËÈ¨ÄÐÅ®Æ½µÈ </a><br><br>
+<a href= "pic02.html">ÊÂÊµ¾ÍÊÇÊÂÊµ£¨Orgasm£©</a><br><br>
+<a href= "pic03.html">¸÷ÐÐÆäÊÇ¶øÒÑ</a><br><br>
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
+<a href= "pic07.html">House of Cards¡¶Ö½ÅÆÎÝ¡·</a><br><br>¡¡
 
+<a href= "link03.html">Severn¡¯s speech before the UN Earth Summit in Rio</a><br><br>
 	<br>
 		<br><a href="#top">·µ»ØÒ³Ê×</a><br>
 	<hr>
@@ -926,7 +956,8 @@ Larry PageµÄÑÝ½²Æ½¾²¶¯ÈË¡£ËûÓÐÁ½¾ä»°ÈÃÎÒÓ¡ÏóÉî¿Ì£º1¡¢ÎÒÃÇÓ¦¸ÃÈ¥´´ÔìÄÇÐ©²»´æÔÚµÄ¶
 <br><br>
 Õâ¾ÍÊÇÎÒÏ²»¶Ê×¶ûµÄµØ·½¡£ÕâÊÇÒ»¸ö¹ÅµäÓëÏÖ´úµÄ½áºÏÌå¡£Î´À´ÓÀÔ¶Ò²²»ÄÜÈ¡´ú¹ÅÀÏµÄ¹ýÈ¥£¬¹ýÈ¥µÄÒ»ÇÐ¿´À´»òÐí²×É££¬µ«È´¸³Óè×Å·á¸»µÄÎÄ»¯ÄÚº­¡£µ«ÏÖ´ú¸ÐÒ²ÊÇ·Ç³£ÖØÒªµÄÌØÕ÷¡£²»´øÓÐÈÎºÎ°ÁÂýÓëÆ«¼ûµÄÈ¥¿´´ýÑÛÇ°µÄÒ»ÇÐÒ²ÊÇÒ»ÖÖÄÜÁ¦¡£
 
-<br><br>
+<br><br>¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
+
 	<br>
 		<br><a href="#top">·µ»ØÒ³Ê×</a><br>
 	<hr>
@@ -1039,6 +1070,7 @@ Lady GagaÊÇÓëH&MºÏ×÷µÄ×îÐÂÊ±ÉÐÃ÷ÐÇ£¬È»¶øÓëLanvin¡¢VersaceºÍIsabel Marant²»Í¬£¬Ëý
 Õâ¸ö°²ÅÅÈÃ±¾ÖÜµÄH&M¸üÃ¦ÁË£¬ÒòÎª¾ÍÔÚÃ÷Ìì£¬Isabel MarantÎªÕâ¸öÈðµä¿ìÊ±ÉÐ¾ÞÍ·Éè¼ÆµÄ×îÐÂÏµÁÐÒ²½«±»°áÉÏ»õ¼Ü£¡
 <br><br>
 
+¸ü¶à×ÊÑ¶£¬Çë·ÃÎÊ£º<a href= "http://www.retter2012.com" title="µã»÷½øÈë"> retter2012.com </a>¡£<br><br>
 
 
 
@@ -1058,7 +1090,11 @@ Lady GagaÊÇÓëH&MºÏ×÷µÄ×îÐÂÊ±ÉÐÃ÷ÐÇ£¬È»¶øÓëLanvin¡¢VersaceºÍIsabel Marant²»Í¬£¬Ëý
 	<br>
 	<b><a name="T13">¶íÂÞË¹µÄ´ó¹úÓÎÏ·</a> </b><br>
 	<hr><br>
-	
+<a href= "link01.html">ÆÕ¾©2013Äê¹úÇé×ÉÎÄ£¨Putin 2013 state-of-nation Address£©</a><br><br>
+<a href= "link02.html">House of Cards¡¶Ö½ÅÆÎÝ¡·</a><br><br>
+<a href= "pic04.html">ÈÕ±¾µÄÒ°ÐÄ</a><br><br>
+<a href= "pic05.html">ÈÕ±¾µÄÄÐÅ®</a><br><br>
+
 ×÷Õß:Î¬ÖÛ<br><br>
 
 ÄÚÈÝÀ´Ô´£º¡¶ÖÇ×åGQ¡·<br><br> 
@@ -1102,7 +1138,10 @@ Lady GagaÊÇÓëH&MºÏ×÷µÄ×îÐÂÊ±ÉÐÃ÷ÐÇ£¬È»¶øÓëLanvin¡¢VersaceºÍIsabel Marant²»Í¬£¬Ëý
 	<br>
 	<b><a name="T14">¡¶¼¢¶öµÄÅ®¶ù¡·ºçÓ°</a> </b><br>
 	<hr><br>
-	
+<a href= "link03.html">Severn¡¯s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic01.html">Ìì¸³ÈËÈ¨ÄÐÅ®Æ½µÈ </a><br><br>
+<a href= "pic02.html">ÊÂÊµ¾ÍÊÇÊÂÊµ£¨Orgasm£©</a><br><br>
+<a href= "link02.html">House of Cards¡¶Ö½ÅÆÎÝ¡·</a><br><br>
 ÊÀ½ç±ä³ÉÀ±½·Ö®Ç°£¬ÏÈÒª±ä³É¿à¹Ï
 
 <br><br>
@@ -1146,7 +1185,9 @@ Lady GagaÊÇÓëH&MºÏ×÷µÄ×îÐÂÊ±ÉÐÃ÷ÐÇ£¬È»¶øÓëLanvin¡¢VersaceºÍIsabel Marant²»Í¬£¬Ëý
 
 <br><br>
 
-
+<a href= "pic01.html">Ìì¸³ÈËÈ¨ÄÐÅ®Æ½µÈ </a><br><br>
+<a href= "pic02.html">ÊÂÊµ¾ÍÊÇÊÂÊµ£¨Orgasm£©</a><br><br>
+<a href= "pic03.html">¸÷ÐÐÆäÊÇ¶øÒÑ</a><br><br>
 ´ÓÍÐ¶ûË¹Ì©·´¹ÛÇÇÒÁË¹Ð¡Ëµ<br><br>
 Àî„Â°´Óï£º´ËÎÄÄË×¾Öø¡¶Á¯Õ²Ä·Ë¹Ï§ÇÇÒÁË¹¡·×ÔÐò£¬¼®ÂÛÇÇÒÁË¹Ð¡ËµÎ´¾¡Ö®ÓàÐË£¬Ò»»Ó¶ø¾Í¡£ÕâÆª×ÔÐò£¬±¾µ±¿¯·¢ÓÚ¡¶¹Ûµä¡·ÔÓÖ¾£¬ØÏÄÎ¸Ã¿¯Ôâê¡£¬Ö»ÄÜÔÚ´ËÓëÖÚ·ÖÏí¡£ <br><br>
  
@@ -1292,6 +1333,7 @@ If asked who is the most complete character in literature since Shakespeare and 
 	<br>
 	<b><a name="T16">éÏé­ÇòÔÚÖÐ¹úÔõÃ´»¹»ð²»ÆðÀ´</a> </b><br>
 	<hr><br>
+<a href= "pic06.html">Sorry£¡ÄÏ¾©Ê§ÊØ</a><br><br>
 	
 ×÷Õß:×ÞºÆ´¨
 <br><br>
@@ -1329,6 +1371,7 @@ If asked who is the most complete character in literature since Shakespeare and 
 	<br>
 	<b><a name="T17">ÔõÑùÈ«·½Î»¶ÁÊé</a> </b><br>
 	<hr><br>
+<a href= "link03.html">Severn¡¯s speech before the UN Earth Summit in Rio</a><br><br>
 	
 Ãçì¿
 <br><br>
@@ -1350,6 +1393,9 @@ If asked who is the most complete character in literature since Shakespeare and 
 <br><br>
 ¡¡¡¡6ÔÂµ×ÎÒµ½»ªÉ³£¬¹äÊéµêµÄÊ±ºò·¢ÏÖÐÁ²¨Ë¿¿¨µÄÊ«¼¯·ÅÔÚ×îÏÔÑÛµÄµØ·½£¬ÕâÎ»Åµ±´¶û½±»ñµÃÕß½ñÄê2ÔÂÈ¥ÊÀ£¬ËýµÄÊ«¾äÆÓËØ£¬È´ÄÜ¸øÃ¿¸öÆÕÍ¨´Ê»ãÒÔÄ§Á¦£¬ÎÒÃÇÀ´¶ÁÒ»¶Î¡ª¡ª¾¡¹ÜÈËÉúÂþ³¤£¬µ«ÂÄÀú±í×îºÃ¼ò¶Ì¡£¼ò½à¡¢¾«ÒªÊÇ±ØÐèµÄ¡£·ç¾°ÓÉµØÖ·È¡´ú£¬Ò¡°ÚµÄ¼ÇÒäÇü·þÓÚÎÞ¿É¶¯Ò¡µÄÈÕÆÚ¡£ËùÓÐµÄ°®ÇéÖ»ÓÐ»éÒö¿ÉÌá£¬ËùÓÐµÄ×ÓÅ®Ö»ÓÐ³öÉúµÄ¿ÉÌî¡£ÌîÌîÐ´Ð´£¬·Â·ð´ÓÎ´ºÍ×Ô¼º½»Ì¸¹ý£¬ÓÀÔ¶ºÍ×Ô¼ºÖ»ÓÐÒ»±ÛÖ®¸ô¡£ÇÄÇÄÂÔÈ¥ÄãµÄ¹·¡¢Ã¨¡¢Äñ¡¢»Ò³¾Âú²¼µÄ¼ÍÄîÆ·¡¢ÅóÓÑºÍÃÎ¡£ÊéµêÀïÓÐÒ»±¾ÏèÊµµÄ´«¼Ç£¬µêÔ±½éÉÜËµ£¬Õâ±¾´«¼ÇÈ¥Äê¸Õ¸Õ³ö°æ£¬»¹Ã»ÓÐ·­Òë³ÉÓ¢ÎÄ£¬²»¹ý£¬ÓÐ¼¸±¾²¨À¼ÓïºÍÓ¢Óï¶ÔÕÕµÄÊ«¼¯¡£Ê«¼¯×°Ö¡¾«ÃÀ£¬µêÔ±ÌôÁËÒ»±¾£º¡°Õâ±¾Êé¸½ËÍÒ»ÕÅCD£¬ÊÇ¸öÈø¿ËË¹ÑÝ×à¼ÒºÍÊ«ÈËºÏ×÷µÄÒôÀÖ»á£¬Äã¿ÉÒÔÌýÒ»¶ÎÒôÀÖ£¬ÔÙÌýËý¶ÁÒ»Ê×Ê«£¬ÔÙ¶ÁÕâ±¾Ê«¼¯¡£¡±ÎÒÂòÁËÕâ±¾Ê«¼¯£¬ÏÈ·­¿´ÁËÒ»±é£¬¼¸Ê®Ò³ºÜ¿ì¿´Íê¡£»Øµ½¼Ò£¬°ÑCD·Å³öÉùÒôÀ´¡£ÎÒÔÚºÃ¼¸´ÎµÄÊ«¸èÀÊËÐ»áÉÏÀÊËÐ¹ýÐÁ²¨Ë¿¿¨µÄÊ«£¬È´ÊÇµÚÒ»´ÎÌýµ½Ê«ÈË×Ô¼ºµÄÉùÒô£¬ÄÇÉùÒôºÍÎÒÏëÏóµÄÒ»Ñù£¬ÉõÖÁÁ¬ËýµÄÐ¦Éù¶¼¾õµÃÇ×ÇÐ¡£µ±È»£¬ÎÒÌý²»¶®£¬Ö»¾õµÃËýµÄÉùÒôÈÃÃ¿¸öµ¥´Ê¶¼ÓÐÄ§Á¦£¬ÓÖÒ»´Î³Á½þÆäÖÐ¡£
 <br><br>
+
+<a href= "link02.html">House of Cards¡¶Ö½ÅÆÎÝ¡·</a><br><br>
+
 Î´À´ÔÓÖ¾»áÓÐÏ·Âð£¿
 <br><br>
 ×÷Õß:ÀîÀÍ
