--- a/story02.html
+++ b/story02.html
@@ -31,7 +31,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<center>
 	<br><a href= "home.html">返回主页</a><br>
 	<font size=7>
-	目录标题栏目1&nbsp; 模板<br><br>
+	狡猾的知识<br><br>
 	</font>	
 	</center>
 
@@ -54,8 +54,18 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 被遗忘30年的法律精英<br><br>
 
 一群老知识分子的坎坷命运足以让我们警惕：有些忽略，会让整个社会付出代价<br><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
+<a href= "pic03.html">各行其是而已</a><br><br>
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 
 
 被遗忘30年的法律精英<br><br>
@@ -167,6 +177,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　潘先生谈到动情处，他甚至落泪了，为他那些受难的师长和系友。（编辑：姜志）
 <br><br>
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
  
 “我们在传承”
 <br><br>
@@ -205,6 +216,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　“要是有了钱，一定要替老人们在上海买个好点的房子。”这是薛波的愿望，但直到现在，老人们的审稿费用都还欠着。（编辑：姜志）
 <br><br>
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 他们被忽视的代价
 <br><br>
 
@@ -313,6 +325,8 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　在英美法教育被人为割断了30年后，我国这方面的人才后继乏人。不知道以后还有没有合适人选出任国际大法官职务，中国驻海牙国际法院前法官倪征日奥，以及他的东吴同班同学李浩培先生都有这种顾虑，1984年，倪先生往海牙国际法院就职时年已79岁，1993年，李浩培就职时更达到了88岁高龄，离任时已届91岁。（编辑：姜志）
 <br><br>
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
 
 东吴大学法学院 消失的一代法学精英　　
 <br><br>
@@ -385,6 +399,10 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　 事态似乎在朝着最好的方向发展。
 <br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
 从教授到囚徒
 <br><br>
 　　 就在《新闻日报》于6月6日刊完杨兆龙文章后两天，6月8日，毛泽东亲笔撰写《组织力量反击右派分子的猖狂进攻》，立即作为中央文件电发各地。
@@ -449,6 +467,15 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	王沪宁：文革可以“病假”不下乡在家自学而后在上海进工厂学徒，1974年19岁被作为“工农兵学员”推荐到华东师范大学西语系（上海师范大学干校外语培训班）学习法语（Robespierre），从师《资本论》陈其人，喜欢尼采（Nietzsche），酷爱读书。93年复旦大专辩论蒋昌建。王沪宁被称为中国第一智囊、新保守（Conservative）主义教父、政治化妆师（Spin Doctor, Play Doctor, Juris Doctor）。戈贝尔（Goebbels），戴季陶或Karl Rove。卢沛宁是Obama的铁哥们，但中国背景让他不能进入核心而只能做白宫内阁秘书长（Cabinet Secretary）。这般低声下气，只有我国河南人做得出来。人文社科欠账太多。广州执信中学高中，一个女同学喜欢文科并要去港大学法律或经济，但没有选文科班。选执信是因为英语好（女校），但图书馆（Libraey）没有原版专业书可读。<br><br>
 
 	万钢是曹禺堂弟，家学渊博。万钢在文革期间搞定德语。政府让你不要学外语，你干吗？你相信共产党员吃苦在前享受在后吗？<br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
+<a href= "pic03.html">各行其是而已</a><br><br>
+
 
 曹禺原名万家宝，字小石，汉族，祖籍湖北潜江，生于天津一个没落的封建官僚家庭，是中国现代杰出的戏剧家，著有《雷雨》、《日出》、《原野》、《北京人》等著名作品，他一生共写过8部剧本，号称“中国的莎士比亚”。
 <br><br>
@@ -459,11 +486,13 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 《雷雨》所展示的是一幕人生大悲剧，是命运对人残忍的作弄。专制、伪善的家长，热情、单纯的青年，被情爱烧疯了心的魅惑的女人，痛悔着罪孽却又不自知地犯下更大罪孽的公子哥，还有家族的秘密，身世的秘密，所有这一切在一个雷雨夜爆发。有罪的，无辜的人一起走向毁灭。曹禺以极端的雷雨般狂飙恣肆的方式，发泄被抑压的愤懑，毁谤中国的家庭和社会。
 <br><br>
 
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 
 	荆楚网消息 (通讯员 胡同章 尹铃瑕) 7月15日，全国政协副主席、科技部部长万钢一行来到湖北潜江视察，潜江市市委书记朱汉桥等陪同视察。
 <br><br>
 　　万钢祖籍潜江，是著名戏剧大师曹禺的堂弟，其高祖父和曹禺先生的高祖父是亲兄弟。在观看了曹禺祖上所留家什、万氏家族谱和万氏家族相关照片以及《潜江旧事》专题片后，他充满深情地说：“万家是个大家族，枝繁叶茂。我的本名就叫万家钢。”在曹禺祖居，万钢挥笔题词“水乡园林，幸福潜江”。在曹禺纪念馆，他欣然以中文和德文形式题名，留下墨宝。
 <br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
 
 万钢的来历：这个海归党外部长的经历、背景实在复杂
 <br><br>
@@ -490,7 +519,8 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 
   <br><br>  
 
-    万钢
+ <a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+   万钢
 <br><br>
     留德创成果，回国图报效
 <br><br>
@@ -938,8 +968,12 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 2007年当得知万先生被下萨克森州州总理Christian Wulff授予勋章的消息，克劳斯搭尔工大和我本人都非常骄傲曾经在万钢部长的人生道路上陪伴过他一段。我们一直都认为万先生是一个不同寻常的人。我们很高兴他在中国的职业生涯能够走得如此迅速而顺利。我本人把他看作我的一个“忘年交”，并且为他取得的新的荣誉感到高兴。如果可能，我也非常乐意为他新的位置提供支持。
 <br><br>
 （感谢姚文剑、张迪、齐月对此文提供的帮助）<br><br>
+
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
+
 新部长的旧问题
 <br><br>
+
 一直以来，科技部的“组织科研项目、分配科研资金、统筹科技政策”等职能颇受人诟病
 <br><br>
 特约记者 岑默 发自北京
@@ -1065,6 +1099,11 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 汪玉凯介绍说，政府系统实行首长负责制，但每个部都有党组，党组是最高决策层，以往通常是部长兼任党组书记。“但民主党派出任部长，就不能担任党组书记了，两者之间如何协调，这是一个新问题。”汪玉凯说，“这个问题解决了，将会出现一种新模式，而这必将会影响政府的整个管理和决策机制。” vingie 
 <br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
 发现万钢 
  <br><br>
 本刊记者　李玫忆 
@@ -1188,6 +1227,12 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 　　2006年 任中国致公党中央副主席<br><br>
 
 　　2007年 任科学技术部部长<br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
+
 万时睿和他的后代在曹禺家族中的位置<br><br>
 中华万氏网 2012年9月30日 原作者毛道海<br><br>
  
@@ -1525,7 +1570,18 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 
 www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 陈济棠(1890～1954)，广东防城人，粤系军阀代表，曾任广东省主席，控制广东军政大权，时称“南天王”。在其主粤期间(1929～1936)，政治上与南京中央政权分庭抗礼，经济上进行有计划的建设，兴办现代实业，大搞市政建设，这一时期的广州工商业和市政建设成绩卓著，为广州的现代化进程打下了一定的基础。主粤期间，广州物价相对稳定，市场繁荣，市民生活有了一定程度的改善。被称为老广州的“黄金时代”。因发动“两广事变”反蒋失败，1936年被逼下野，1954年在台湾去世。<br><br>
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
+<a href= "pic03.html">各行其是而已</a><br><br>
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 陈济棠：在火药桶上编织“神话”<br><br>
 
     1936年7月18日黄昏，天色灰沉，因发动“两广事变”而失败下野的陈济棠，身携2600万元巨款，满怀郁闷，从黄埔鱼珠炮台登上海虎号军舰，黯然离开广州，踏上逃亡香港的路程。<br><br>
@@ -1841,6 +1897,18 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 <br><br>
 陈济棠发展广东地方经济，主观上自然是出于巩固自己统治的需要，以增强与蒋对抗的实力，同时便于自己聚敛私财，但客观上也确实促进了广东的建设事业。有学者称，陈济棠为“广东及其夫妻桑梓之地，带来了近代百年未曾有过的建设机遇”。以广州为例，1929—1935年物价平均每年下降2.53%，1934—1935年银元购买力平均每年比1926年上升12.12%。广州一举成为华南的“首善之区”，整个广东也跨进了民国年间的“黄金时代”。 
 <br><br>
+
+
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
+
 1980年9月10日，邓小平在接见从美国回国参观的陈济棠第十子陈树柏教授时，曾说了一段颇令陈树柏意外和感动的话：“令尊治粤8年，确有建树，有些老一辈的广东人还在怀念他。”邓小平还亲笔书写鲁迅诗“度尽劫波兄弟在，相逢一笑泯恩仇”赠与陈树柏。 
 <br><br>
 能得到中共高层的高度肯定，想必是陈济棠生前万万没有想到的。而邓小平之所以如此评价陈济棠，除了陈氏建设广东的成就，还缘于他对红军的一次特殊贡献。原来，蒋介石于1932年3月重新上台后不久，为了广聚反共力量，任命陈济棠为赣粤湘边区“剿匪”总司令，可陈在对付红军的问题上思想极为矛盾。一方面，他怕自己的力量为红军所削弱，另一方面又怕红军被赶跑后，蒋介石可以从江西直击广东。因此，陈济棠重新玩儿起了当年反蒋使的那一招，即不采取任何像样的进攻行动，而是围绕防堵中央红军和蒋介石军队入粤这个目标采取一些军事部署。1933年10月，蒋介石发动对中央苏区的第五次“围剿”，由于“左”倾冒险主义者的错误领导，红军节节败退，战略转移势在必行。可红军长征要经过蒋介石设下的4道封锁线，其中第二道是以粤军为主构建的，以当时红军的力量与粤军相对抗难以胜算，红军的命运危在旦夕。恰在这时，陈济棠于1934年9月、10月间电约红军进行军事密谈。红军派出的谈判代表何长工和潘汉年，带着朱德的介绍信，经过三天三夜的谈判，与粤方达成了就地停战、互通情报、解除封锁、互相通商、互相借道等5项协议。10月27日，红军开始突破第二道封锁线的军事行动，陈济棠履行了秘密协议，明令“敌不向我射击，不准开枪；敌不向我袭击，不准出击”，数万红军得以顺利通过陈济棠的辖区，向西踏上了万里长征的征途。当然，陈济棠此举并不意味着他政治立场的转变，红军通过粤北后，他派第二军张达部参加追击红军；红军入黔后，他还4次派部参加围堵。凭借这些“战功”，陈济棠于1935年2月被国民党当局授予一级陆军上将。 
@@ -1876,7 +1944,11 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 	<br>
 	<b><a name="T5">大英帝国的直布罗陀</a> </b><br>
 	<hr><br>
-	
+
+
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>	
 三百年的争吵
 
 <br><br>
@@ -1907,6 +1979,70 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 <br><br>
 
 
+直布罗陀争端<br><br>
+
+西班牙政府声称，在必要的情况下，将同阿根廷联合起来对抗英国。但总体而言，围绕直布罗陀的偶发性对峙并不会引爆战争。<br><br>
+
+作者：张纲纲 来源：南风窗 日期：2013-11-24<br><br>
+
+
+　10月31日拂晓，在距离直布罗陀海港不远处，一艘英国皇家海军的补给舰正接受直布罗陀海岸警卫队的几艘补给船的补充给养。突然，西班牙海岸警卫队的一艘巡逻艇闯入警戒线，在英方数次喊话无效后，双方枪炮相对，引起不小的外交风波。两国在直布罗陀主权归属问题上的斗争，其激烈程度可见一斑。但总体而言，由于双方及欧盟的危机管控机制比较成熟，这种偶发性对峙并不会引爆战争。
+<br><br>
+　　
+ 
+　　“共管”方案的流产<br><br>
+
+　　海外领地一直颇令英国人纠结。这些领地大多远离英国本土，高度自治，不关本土民生，但由于很多领地位处海上交通要津，对英国保持国际影响力又至关重要。直布罗陀就是其一。<br><br>
+
+　　直布罗陀是一个半岛，三面环水，只有北面与西班牙本土接壤。鉴于直布罗陀特殊的地理位置和直布罗陀海峡14公里宽的黄金水道，英国王室趁西班牙陷入王位争夺内战时，派无敌舰队于1704年夺得直布罗陀半岛，并最终于1713年逼迫西班牙政府签订《乌德勒支和约》，正式将直布罗陀半岛割让给英国。延续至今，该地人口约3万（不包括英国驻军），其中英国人约5000。<br><br>
+
+　　从地缘上讲，西班牙人说直布罗陀是他们的有一定道理。直布罗陀位于西班牙的最南端，与西班牙本土相连，浑然一体，其多数居民信奉天主教，通用西班牙语。许多西班牙人，包括一些政府官员，觉得自己家门口的地儿，怎么会变成人家的地盘呢？从常理上讲，说不过去！所以在1963年，西班牙政府上诉至联合国特别委员会，要求英国政府将直布罗陀归还给西班牙。联合国一方遂要求两国就直布罗陀问题达成协议，以结束该地的殖民状态。但是在1967年全民公决中，直布罗陀居民一致选择继续留在英国。英国政府欢欣之余，立法让直布罗陀高度自治。<br><br>
+
+　　1969年，西班牙关闭了通往直布罗陀的边境口岸，撤出了许多劳动力，大大削减了通往直布罗陀的运输途径，以示对抗。1975年，西班牙独裁者佛朗哥病死，该国开始向西方议会民主政治过渡。1980年，《里斯本条约》的签订，使得英国和西班牙同意谈判。为表善意，西班牙政府于1982年重开通往直布罗陀的边境口岸。1984年，在《布鲁塞尔条约》精神的感召下，英国和西班牙政府同意给予在西班牙的直布罗陀人和在直布罗陀的西班牙人同等待遇，并且撤销边境口岸，自由通行。英国和西班牙政府在直布罗陀问题上逐步形成共识，有意共同管理直布罗陀。<br><br>
+
+　　但是，在2002年的全民公决中，直布罗陀人拒绝了联合管理的建议，从而使得这一方案最终流产。自此之后，英国和西班牙在直布罗陀问题上就再也没有实质性进展。双方大吵没有，小吵不断，这种情形一直持续到今年7月底的“珊瑚礁事件”。<br><br>
+
+ 
+　　
+
+　　“珊瑚礁事件”<br><br>
+
+　　7月底，直布罗陀地方政府在周边水域堆砌了一些混凝土方块，据说是要建人工珊瑚礁，以便海洋生物在此繁衍生息，最终想在这里建立一个海洋自然保护区。听起来挺正常，却遭到西班牙政府的强烈反对。后者声称那是西班牙的领海，直布罗陀政府在没有取得西班牙政府许可的条件下自行其是，是对西班牙的侵犯。另外，西班牙政府指责人工珊瑚礁破坏生态环境，对其渔业也有破坏作用。<br><br>
+
+
+为表抗议，西班牙政府7月底突然加强了对过往西班牙- 直布罗陀口岸的边境检查，导致进出直布罗陀的交通严重瘫痪，“珊瑚礁事件”正式爆发。<br><br>
+
+　　直布罗陀半岛作为英国的一部分，不属申根签证区，而西班牙是申根区的一部分，所以对于进出直布罗陀的人员和货物，西班牙是有权进行检查的。但是，这种检查必须适当，不能违背欧盟的法律，人为制造欧盟区内通行上的不便。从这个角度讲，西班牙政府对直布罗陀口岸的边检，明显过于苛刻，不符合欧盟的规定。<br><br>
+
+　　“珊瑚礁事件”发生后，英国政府就这一事件正式向西班牙驻英国大使投诉，英国外相黑格给西班牙外相打了私人电话，情况一度缓和，西班牙通往直布罗陀的边境检查也松弛了下来。可是，在随后西班牙一家报纸所做的专访中，西班牙外相却令人意外地说要进一步加强对直布罗陀的边境控制，比如征收每人50欧元的“过境费”，对于飞往直布罗陀的飞机关闭领空等，充满火药味，从而令形势再度紧张。<br><br>
+
+　　8月5日，英国首相卡梅伦公开表示极度关注直布罗陀事态的发展。欧洲理事会也敦促西班牙在进行边境控制的时候，必须遵循欧盟的法律。8月7日，卡梅伦与西班牙首相拉霍伊就直布罗陀的问题进行了电话交流，但据说谈话并不愉快。8月9日，一艘皇家海军的两栖攻击舰前往直布罗陀。虽然英国国防部声称这是例行训练，但在西班牙人眼里，武力威胁的用意是溢于言表的。<br><br>
+
+　　基于英国政府的反应，西班牙政府是针锋相对，声称将把这一问题提交到联合国安理会，并说在必要的情况下，将同阿根廷联合起来，对抗英国。<br><br>
+
+　　众所周知，英国和阿根廷在1982年曾就马岛问题大打出手，英国虽然最终取胜，却令拉美国家疏远。西班牙提及阿根廷，戳到了英国的痛处。作为反应，包括驱逐舰、直升机航母在内的皇家海军编队相继从各英国海军基地出发，前往直布罗陀，说是例行训练，但“项庄舞剑，意在沛公”！<br><br>
+
+　　8月12日，英国政府声称，正在考虑对西班牙采用史无前例的法律手段，以捍卫英国的国家利益。9月底，欧盟派出6人调查团前往直布罗陀，处理两国政府的争端。但调查还没结束，便上演了文章开头的一幕，英、西两国几乎擦枪走火。至此，这次由“珊瑚礁事件”引发的主权摩擦，趋于白热化。<br><br>
+
+　　
+
+　　直布罗陀的命运<br><br>
+
+　　关于这次直布罗陀冲突，英国的主流媒体认为是西班牙政府小题大做，借题发挥。按代表西南英格兰和直布罗陀选区的保守党议员福克斯的话说，西班牙政府选择过激行为，完全是因为疲于应付国内的矛盾，借以转移国内人民的视线；所谓的破坏海洋环境和渔业资源，完全是一个借口。<br><br>
+
+　　这种说法在英国人中有一定市场。欧债危机爆发以来，西班牙国内的金融系统几乎破产，以至于在2012 年为了获得欧洲央行1000亿欧元的紧急贷款，被迫接受了后者非常苛刻的条件，在国内厉行紧缩财政，结果失业率居高不下，全国平均失业率超过25%，年轻人失业率高达50%！加上西班牙经济至今无好转迹象，老百姓心中的忍耐已经接近临界点。在这种情况下，西班牙政府利用直布罗陀冲突转移国内的矛盾，是讲得过去的。<br><br>
+
+
+但不管西班牙政府这次的真实意图是什么，既然挑起了这个事端，总得有一个解决方案。今年正值直布罗陀成为英国海外领地的300周年纪念，英国和西班牙作为各方面交流十分密切的两个欧盟大国，动武方案对其各自政府都是“不可选项”，因其民众对危机无法化解的直觉更多会是本国政府无能而不是其他仇外理由，所以两国最终还是会回到谈判桌上。<br><br>
+
+　　至于谈判会否最终解决直布罗陀的主权归属问题，谁都不抱奢望，因为两国口头上都没有让步的意思。但是，西班牙这次临时加强的边境检查，谈判之后应该是会撤销的。为了进出直布罗陀，一次就要在边检口岸等上六七个小时，对于那些在两边工作，每天需要来回跑的人，谁能受得了？即使西班牙政府根本不在乎那些直布罗陀人，那些在直布罗陀工作的西班牙人怎么办？西班牙国内的矛盾已经十分尖锐，西班牙政府不会做那些激怒更多人不满的事情。再说，这也明显有违欧盟区内自由流动的精神，柏林墙已经倒塌24周年（11月9日）了，西班牙的临时边检迟早也会撤掉，拉霍伊政府不过是在等一个台阶下罢了。<br><br>
+
+　　其实，直布罗陀的主权归属不仅仅是英国和西班牙两方的事情，直布罗陀人民也有权选择自己的命运。战后多年来，直布罗陀的人民一直希望继续接受英国统治，并在多次公投中以绝对多数票支持英国的统治。从这个角度讲，任何外加的力量离开内因这个主导因素，是起不了多大作用的。<br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
 
 	<br>
 		<br><a href="#top">返回页首</a><br>
@@ -1927,7 +2063,15 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 2013年9月13日<br><br>
 
 日本局势不平静。对此稍有关注的人都不难意识到，安倍晋三治下的日本政坛正在发生着某些变化：在经济领域由国家推动刺激政策、在政治上与美、菲等加紧同盟应对中国崛起，而更令人瞩目的是他在军事上毫不掩饰的企图——他要修改和平宪法，将自卫队变成国防军，将日本重建为一个军事大国。无疑，不久前执政联盟在参议院选举中的胜利，更进一步坚定了他推动修宪的信心。面对右翼政客一浪高过一浪的修宪呼声，日本国内自然也有大量反对修宪的声音，此刻何去何从，毕竟将影响这个国家乃至东亚之后数十年的政治图景。<br><br>
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
+
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 　　这是一百多年来，日本又一次走到十字路口，面临“两条道路”的抉择。<br><br>
 
 　　早在明治维新初期，当时的日本政治家对于国家前途就有两种相持不下的看法，一派是以西乡隆盛等为代表的“征韩派”(或称“大陆派”)，主张向外扩张;另一派则是以岩仓具视考察团成员为主的“内治派”，主张向西方学习，专注于内政，由富而强。之后直到二战战败，主导日本国民情绪的，实际上是前者。早年曾是自由主义者的著名记者德富苏峰，在中年后却转而强烈信奉国家主义，到晚年竟被判为甲级战犯，其人生就是这一时期的缩影。<br><br>
@@ -1948,6 +2092,7 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 <br><br>
 　　这确实是包括中国人在内的东亚人都应面对的大课题。倒不是说如何接纳日本这个有“心理苦恼”的“问题少年”，而在于，这需要所有人的共同努力。事实上，中国人同样需要学习如何在一个两强并存的东亚格局中与日本相处，仅仅将之蔑视为“小日本”并不能自动解决问题——当然，我们理应欢迎石桥湛三所提出的那个“小日本”——一个和平繁荣、与邻为善的日本。如今安倍晋三太多强调了“大”和“强”的好处，他应当思考下当年甲壳虫的那句著名的广告语：Think Small(“想想小的好处”)。
 <br><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 
 不正常的日本
 <br><br>
@@ -1989,6 +2134,7 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 	<br>
 	<b><a name="T7">“棱镜门”背后的大奸大恶</a> </b><br>
 	<hr><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 	
 作者:李劳<br><br>
 
@@ -2015,7 +2161,8 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 <br><br>
 　　基斯·亚历山大统领的网络部队，是国家组织在人类社会进入网络时期之后做出的新举措。借助信息科技，其力量远超任何时期的情报组织。力量一旦强大，而无必要钳制，必然出离本分，遗祸人间。这是棱镜门背后的美国网络部队真正的可怕之处。它的监控及攻击目标，不仅会是美国的国家敌人，也会包括所有美国人。它知道，真正能将它关到笼子里去的是民主国家的公民权和媒体监督权。
 <br><br>
- 
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
 日本众议院通过保密法案惹争议 
 <br><br>
 2013年11月26日   新华网
@@ -2050,7 +2197,10 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 	<br>
 	<b><a name="T8">英国的光荣孤立</a> </b><br>
 	<hr><br>
-	
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 作者:维舟<br><br>
 
 内容来源：《智族GQ》  
@@ -2136,7 +2286,17 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 
 <br><br>
 
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
 
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
+
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 
 
 
@@ -2170,6 +2330,18 @@ www.guangzhou.gov.cn<br><br>2005年6月28日<br><br>
 <br><br>
 　　值得注意的是，埃及总理的这番话是在接受土耳其媒体采访时说的，而土耳其正是与以色列交恶的另一个地区大国。两国原本同为非阿拉伯国家及美国盟友，又不接壤，因而长期相安无事，但自去年土耳其的加沙救援船遭以色列袭击一事之后，两国原本被遮盖的矛盾骤然升级。关于这一事件的报告在不久前公布(时机实在是不能再差了)后，两国都对结论不满——土耳其尤然，在以色列拒绝道歉后，土耳其宣布将两国外交关系由大使级降为二秘级，所以高于二等秘书的外交官将返回各自国家，同时还宣布将保留采取进一步行动的权利，直至以色列道歉。
 <br><br>
+
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
+
 　　雪上加霜的是，巴勒斯坦民族机构也在此时宣布要正式作为一个国家加入联合国;连约旦这样长期和以色列关系还算相当平静的小国，也出现支持巴勒斯坦、要求政府反对以色列的游行——其重要意义在于：迄今为止，约旦是除埃及之外与以色列保持外交关系的唯一一个阿拉伯国家。也难怪以色列公共广播电台新闻主持人阿里耶·戈兰要说：“在土耳其，政府反对我们;在埃及，暴徒反对我们;在联合国，大多数人都反对我们。”
 <br><br>
 　　确实，现代以色列史上，大卫王之星从未如此孤独过。虽然这是一次爆发性的外交困局，但冰冻三尺，非一日之寒，所有这些邻国对以色列的愤怒，表面上看是针对它的某些行为(打死埃及士兵、在土耳其救援船上过度使用武力，等等)，但那些只是导火索，深层原因都是长期以来蓄积着的不满，甚至以色列这个国家的存在本身，就是不满的根源之一。这也是为什么许多阿拉伯国家至今拒绝在外交上正式承认以色列的存在，因为这是维持阿拉伯世界统一的重要前提之一。
