--- a/story03.html
+++ b/story03.html
@@ -31,7 +31,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<center>
 	<br><a href= "home.html">返回主页</a><br>
 	<font size=7>
-	目录标题栏目1&nbsp; 模板<br><br>
+	中国的流行<br><br>
 	</font>	
 	</center>
 
@@ -51,7 +51,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<a href="#T12">对不起，当年我们没守住南京</a><br><br>
 	<a href="#T13">天下头号千古逆贼、卖国贼</a><br><br>
 	<a href="#T14">出去旅游“强迫症”</a><br><br>
-	<a href="#T3">小标题3</a><br><br>
+
 	
 	<br>
 	<b><a name="T1">从战争系统到考试系统</a> </b><br>
@@ -77,7 +77,18 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 
 
- 
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
+<a href= "pic03.html">各行其是而已</a><br><br>
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 
 
 	<br>	
@@ -338,7 +349,15 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<b><a name="T3">“《大国崛起》没有特殊政治背景”</a> </b><br>
 	<hr><br>
 如果说《河殇》基于Toybee的挑战和应战理论。那么，徐中约的the ride of modern China，采用进化论的观点解释中国近代史。史景迁说，近代史要从明清开始，而不能从鸦片战争开始。如果从鸦片战争开始，只看到列强入侵。从明清开始，就能研究中国自己的问题。<br><br>
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
+
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 没有任何政治背景
 <br><br>
 　　11月24日，《大国崛起》在CCTV播出了最后一集，目前正在重播。
@@ -409,6 +428,9 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　这位教授说，“最近一段时间，社会对历史的重视不太够，许多常识性的东西有很多人不知道，这是不应该的。中央提出建立学习型社会，我认为学习历史知识也是一个方面。”
 <br><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
+
 “用民主概括西方崛起是片面的”
 <br><br>
 　　记者：有人说之所以引起轰动就是因为是在中央电视台播出，容易让人有政治联想，钱先生怎么看？
@@ -487,6 +509,16 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 　　在以后每年的12月8日，死难者的家人都会走向市区的小西湖墓地，当年丧生的325人中大多数埋葬在这里。
 <br><br>
+
+
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
+
+
 　　今年的12月8日，除了雪照样下着，一切都时过境迁。人们按照自己的轨迹活着：的士司机载着游客去黑山公园，看一看这个城市掘到第一桶金的地方；年轻的石油工人正举行盛大的婚礼；井架上的守望者站在阳光下，脸上绽出灿烂的笑容……只有小西湖墓地的一束花，无声地提醒人们，记住这里曾经发生过的不幸。
 <br><br>
 
@@ -505,6 +537,9 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 　　时至今日，暨南大学的学生仍不乏这种尴尬。介绍学校时，总要在前面加上“广州”二字才能讲清。今年3月前，在中文搜索引擎“百度”上搜索“暨南大学”，还曾被好心地提示，“你要找的是不是济南大学？”<br><br>
 
 　　为着复杂的校名，让曹聚仁会忍不住“真想打他几十板手心”的端方，就是百年前暨南大学的前身———暨南学堂的创办人。<br><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
 
 　　1906年，两江总督端方上书光绪皇帝，请求允许“南洋各岛及檀香山、旧金山等处侨民”回南京读书，以“宏教泽而系侨情”。之后，在南京薛家巷成立专门学堂，并取《尚书·禹贡》“东渐于海，西被于流沙，朔南暨，声教迄于四海”之意，命名“暨南学堂”，意为将中华民族的道德风范和文化教育传播到南洋等海外各地。<br><br>
 
@@ -541,6 +576,9 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 　　1910年进入暨南学堂的陈维龙，是来自吉隆坡的侨生，在回国前，念过几年私塾和半年新学堂，经学很熟悉，英文、算术却很差。回国后又发现自己缺乏中国历史知识，为此，陈维龙特意向国文老师请教，老师回答说，“那很简单，你把《纲鉴易知录》看一看，就能应付裕如。”当时南京书店无存货，陈维龙赶紧向上海商务印书馆订了一套，“收到时把我吓昏了，原来它一套书一共有一百几十册”。<br><br>
 
 　　陈维龙英文不好，却又碰到一位留学日本的英文老师。他一直记得这位老师教的英文对话：“请问先生贵姓？”（What is your honourable sirname？）“敝姓陈。”（My humble sirname is Chen．）<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
 
 
 
@@ -832,6 +870,12 @@ Pls Contact Retter2012.com Team at jobnet@188.com
    黄国才指是次进行二次创作，是觉得掉路姆西较掉鸡蛋更高层次，因路姆西较环保，可循环再掉，“路姆西软软的，若在‘飞行大赛’中失手碰到人，都不会太痛。”
 
 <br><br>
+
+
+
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
 外媒也关注 “港人黑色幽默”
 <br><br>
 
@@ -850,7 +894,10 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<b><a name="T7">“性都”转型</a> </b><br>
 	<hr><br>
 	
-
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
+<a href= "pic03.html">各行其是而已</a><br><br>
 沈泽玮 
 <br><br>
 2013年12月13日
@@ -891,7 +938,9 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<br>
 	<b><a name="T8">《风起》隐日军罪行</a> </b><br>
 	<hr><br>
-	
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>	
 	2013年12月12日<br><br>
 
 	宫崎骏号称为收山作的动画片《风起》，近日接连在纽约、洛杉矶、波士顿等影评人协会奖获颁最佳动画大奖，但一名波士顿影评人协会成员Inkoo Kang（姜寅求），在会场宣读声明谴责该片有道德盲点，也炮轰宫崎骏隐瞒日军罪行，言论震惊各界。
@@ -918,6 +967,9 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<br>
 	<b><a name="T9">普京期待俄成为“世界领袖”</a> </b><br>
 	<hr><br>
+<a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+
 人民网莫斯科12月12日电 (记者 刘旭) 12日，俄罗斯总统普京在发表年度国情咨文时表示，俄罗斯不觊觎超级大国地位，不争求世界和地区霸权，也不会强迫他国接受俄罗斯的保护。<br><br>
 普京表示，当今世界各国在军事政治、经济和信息领域的竞争不仅没有减弱，而且在逐渐加强。其他国家都在密切关注俄罗斯的强大。
 <br><br>
@@ -1004,7 +1056,11 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
    他指出，俄罗斯一半地区的出生率超过了死亡率。乌拉尔所有地区、伏尔加河中下游地区和远东的大部分地区出生率超过全国平均水平。 新华社 中新网
 <br><br>
-   档案
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
+档案
 <br><br>
    历次国情咨文 强国富民是主线
 <br><br>
@@ -1025,6 +1081,10 @@ Pls Contact Retter2012.com Team at jobnet@188.com
    2012年12月，普京在第三度当选俄总统后发表了首个国情咨文，在近一个小时的时间里，他对俄罗斯产业转型、就业、反腐败、政治改革以及国际地位等问题一一阐述。 中新网
 
 <br><br>
+
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 普京发表国情咨文：期待俄成为“世界领袖”<br><br>
 2013年12月13日   环球时报<br><br>
 环球时报驻俄罗斯特约记者 乐静文 柳直<br><br>
@@ -1065,7 +1125,8 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	
 王岐山荐书《大清相国》被网络雪藏很久，如今又被爆炒。<br><br>
 其实，王岐山研究档案的功夫才值得称道（西安碑林）。大清相国陈廷敬，为满族统治阶级卖命。所有权与经营权都没有分离的，陈廷敬连皇帝的CEO都算不上啊。可怜。陈廷敬是汉人（又说是皇帝的私生子），在明朝丢了汉人的江山后腆着脸为异族（类同日本）服务，有何颜面？<br><br>
-
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
 王岐山喜欢House of Cards，不会吧？这不是自毁形象的吗？喜欢看一个马基雅弗利主义者？或者，在与马基雅弗利主义者周旋？<br><br>
 ##《House of Cards》体现了我们的领导不但没有品味。几年前，下届常委曾推荐新书《论语别裁》。如此说来，我们的领导不但没有品味，而且缺乏见识。##<br><br>
 《纸牌屋》（House of Cards）是一部以政治为题材的美国电视连续剧，根据基于Micheal Dobbs小说的同名BBC电视剧改编，由Beau Willimon制作。第一季于2013年2月1日在流媒体服务商Netflix首播。<br><br>
@@ -1073,6 +1134,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 《纸牌屋》由同名英国小说改编，是一部政治题材的剧集。在这部新剧中，凯文·史派西将饰演一位政治家，他的人生信条便是，为了爬上权力的顶峰，将不惜一切代价。据悉，该剧将挖掘政治阶层人群的方方面面，政治的腐败、人性的贪婪、爱情与欲望都将在剧中得到展现。
 本剧背景设置在在现今的华盛顿哥伦比亚特区，主要讲述了众议院多数党党鞭弗兰西斯·安德伍德(凯文·斯贝西饰演)，在晋升为国务卿的希望破灭后，决定报复 那些背叛他的人 。该剧主演还有罗苹·莱特·潘，凯特·玛拉和Corey Stoll。<br><br>
 
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 
 王岐山荐书《大清相国》洛阳纸贵 讲述铁腕治吏<br><br>
 2013年12月13日  第一财经日报 <br><br>
@@ -1148,7 +1210,11 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 
 
 
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 
 
 
@@ -1262,7 +1328,11 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 
 
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
 
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 
 
 
@@ -1519,6 +1589,13 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 <br><br>
 原作者Michael Dobbs更为著名的是 Winston's War: A Novel of Conspiracy，更为真实精彩。
 <br><br>
+
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
 Winston's War is a 2003 novel by Michael Dobbs that presents a fictional account of the struggle of Winston Churchill to combat the appeasement policies of Prime Minister Neville Chamberlain.
 <br><br>
 Plot summary 
@@ -1548,7 +1625,11 @@ Winston's War is the first in a series of novels by Dobbs about Churchill's wart
 　　然而让人意外的是，Netflix在艾美奖的突破性胜利并没能为其自身发展带来好处，网站的股价和新增用户量反而还有下降的趋势：近日Netflix的股价下跌9%，公司总值下降3.6%;公司上一季度新增用户数量为200万，但在获得艾美提名的这个季度，新增加的用户则只有63万。
 <br><br>
 
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 House of Cards is an American political drama series developed and produced by Beau Willimon. It is an adaptation of a previous BBC miniseries of the same name, which is based on the novel by Michael Dobbs. The entire first season, 13 episodes, premiered on February 1, 2013, on the streaming service Netflix.[2] A second season of 13 episodes is currently in production.[2][3]
 <br><br>
 Set in present day Washington, D.C., House of Cards is the story of Frank Underwood (Kevin Spacey), a Democrat from South Carolina's 5th Congressional District and House Majority Whip who, after getting passed over for appointment as Secretary of State, decides to exact his revenge on those who betrayed him. The series also stars Robin Wright, Kate Mara, and Corey Stoll in lead roles.
@@ -1598,8 +1679,11 @@ His 2004 novel Winston's War was shortlisted for the Channel 4 Political Book of
 <br><br>
 Anthony Howard of The Times said "Dobbs is following in a respectable tradition. Shakespeare, Walter Scott, even Tolstoy, all used historical events as the framework for their writings. And, unlike some of their distinguished works, Dobbs's novel is, in fact, astonishingly historically accurate".
 <br><br>
-Dobbs is now a full-time writer, and divides his time between London and Wiltshire. He has two sons from his first marriage and two step-sons with his second wife, Rachel.[4
+Dobbs is now a full-time writer, and divides his time between London and Wiltshire. He has two sons from his first marriage and two step-sons with his second wife, Rachel. 
 <br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
 　　第71届金球奖颁奖典礼将于美国时间1月12日在洛杉矶举行。<br><br>
 
 　　以下为完整提名名单：<br><br>
@@ -1749,7 +1833,9 @@ Dobbs is now a full-time writer, and divides his time between London and Wiltshi
 	<hr><br>
 12月13日：南京沦陷纪念日。<br><br>
 日本帝国军队于1937年12月13日攻占南京，随后在南京及附近地区进行大规模报复性屠杀。<br><br>
-
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 四名抗战老兵致歉:对不起，当年我们没守住南京<br><br>
 2013年12月13日 光明网<br><br>
 
@@ -1825,6 +1911,9 @@ Dobbs is now a full-time writer, and divides his time between London and Wiltshi
 　　请老兵们接受我们由衷的敬意！<br><br>
 
 <hr>
+<a href= "pic04.html">日本的野心</a><br><br>
+<a href= "pic05.html">日本的男女</a><br><br>
+<a href= "pic06.html">Sorry！南京失守</a><br><br>
 
 另外一段历史：<br><br>
 
@@ -1833,7 +1922,10 @@ Dobbs is now a full-time writer, and divides his time between London and Wiltshi
 　“论者普遍认为，曾国藩是中国传统文化的集大成者。有的论者甚至说，从某种意义上讲，曾国藩是中国传统文化的化身。如果说，儒家文化可以分为早、中、晚三个发展时期，并有与之相应的三个代表人物的话，那么早期为孔子，中期为朱熹，而末期就是曾国藩了。曾国藩确实继承了中国以儒学的纲常名教为核心的传统文化。这次提交大会的许多论文都涉及这一点。”<br><br>
 　　
 <hr>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 再加一段历史：<br><br>
 1948年5月23日，东北野战军（后来改名第四野战军）占领大房身机场，长春国民党守军与沈阳空中运输遂中断，自此至10月19日国军投降，共产党对国民党守军发动了近5个月的围困，史称“长春围城战”。期间，无数百姓被饿死，大街上饿殍遍野，长贯穿市区的伊通河发出阵阵尸臭，长春成为解放战争期间百姓死亡最多的城市。<br><br>
 
@@ -1878,11 +1970,18 @@ Dobbs is now a full-time writer, and divides his time between London and Wiltshi
 	<br>
 	<b><a name="T13">天下头号千古逆贼、卖国贼</a> </b><br>
 	<hr><br>
+
+
 六祖慧能《六祖坛经》: shadow of shadows  <br><br>
 
 因为其师兄神秀的偈：身似菩提树，心似明镜台，时时勤拂拭，勿使惹尘埃 。六祖感觉禅悟不彻底，于是吟出了：菩提本无树,明镜亦非台,本来无一物,何处惹尘埃 。 <br><br>
 
-	
+<a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
+
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
 中新社北京12月13日电 据朝鲜中央通讯社13日报道，朝鲜国家安全保卫部特别军事法庭于12日对张成泽进行了审判，宣布对他判处死刑并立即执行。<br><br>
 
 　　朝中社的报道称，张成泽“对全部罪行供认不讳”；法庭宣读了朝鲜国家安全保卫部特别军事法庭的判决书。
@@ -1997,6 +2096,10 @@ Dobbs is now a full-time writer, and divides his time between London and Wiltshi
 国内旅游运动 <br><br>
 “运动”的含义在体育运动之外，70年前生人都知道它在中国最主要的含义是政治运动和社会运动，在电影《芙蓉镇》和《活着》里都有这样的片段：一个呆着红袖箍的猥琐男人敲着小锣，走街串巷，嘴里喊着：运动喽，运动喽。记忆中，阿Q也喊过。他想的无外乎是运动带来改变后，他可以去摸吴妈的奶子。<br><br>
 
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic01.html">天赋人权男女平等 </a><br><br>
+<a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
+<a href= "pic03.html">各行其是而已</a><br><br>
 
 维基百科对社会的运动的解释是，Social movements are a type of group action. They are large informal groupings of individuals or organizations which focus on specific political or social issues. In other words, they carry out, resist or undo a social change. （http://en.wikipedia.org/wiki/Social_movement）<br><br>
 
@@ -2021,6 +2124,8 @@ Dobbs is now a full-time writer, and divides his time between London and Wiltshi
 
 四、越来越贵。<br><br>
 
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
+
 网络时代的朋友<br><br>
 
  2011 年 03 月 14 日   晓雪	<br><br>
@@ -2043,6 +2148,11 @@ Dobbs is now a full-time writer, and divides his time between London and Wiltshi
 <br><br>
 当代的君子之交，也许淡如水，也许甜如蜜，最重要的是彼此的惦记、理解和包容，其实网络再怎样发达，人和人的关系有一点从来没变过——人心换人心，用诚心待朋友的人，才会拥有真朋友。
 <br><br>
+
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+
+
+
 给内地尖子的时尚建议书<br><br>
 
  2013 年 10 月 30 日   janicewong	
