--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 	<br>
 	Vogue时尚简报 <br>
 	</font>	
-	（圣诞新年流行调研）<br><br>
+	（圣诞新年中国元素）<br><br>
 	<font size=5>
 	<a name="top"> <b>目录</b></a>
 	<table height="100" border="1">
@@ -42,7 +42,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 			 <img src="icon.png" height="50" vspace="10" hspace="10" alt="点击进入" border="2">
 			</td>
 			<td>
-			<a href= "story01.html" title="点击进入"> 目录标题栏目1 </a>
+			<a href= "story01.html" title="点击进入">Vogue的流行 </a>
 			</td>
 			
 		</tr>
@@ -52,7 +52,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 			<img src="icon.png" height="50" vspace="10" hspace="10" alt="点击进入" border="2">
 			</td>
 			<td>
-			<a href= "story02.html" title="点击进入"> 目录标题栏目2 </a>
+			<a href= "story02.html" title="点击进入"> 狡猾的知识 </a>
 			</td>
 		</tr>
 
@@ -61,7 +61,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 			<img src="icon.png" height="50" vspace="10" hspace="10" alt="点击进入" border="2">
 			</td>
 			<td>
-			<a href= "story03.html" title="点击进入"> 目录标题栏目3 </a>
+			<a href= "story03.html" title="点击进入"> 中国的流行 </a>
 			</td>
 		</tr>
 
@@ -70,7 +70,7 @@ Pls Contact Retter2012.com Team at jobnet@188.com
 			<img src="icon.png" height="50" vspace="10" hspace="10" alt="点击进入" border="2">
 			</td>
 			<td>
-			<a href= "links.html" title="点击进入"> 动态链接 </a>
+			<a href= "links.html" title="点击进入"> 图片资料汇编 </a>
 			</td>
 		</tr>
 
