--- a/links.html
+++ b/links.html
@@ -41,7 +41,7 @@
 	<center>
 	<br><a href= "home.html">返回主页</a><br>
 	<font size=7>
-	动态链接（在线动态更新）<br><br>
+	图片资料汇编<br><br>
 	</font>	
 	</center>
 
@@ -49,15 +49,17 @@
 
 <a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
 <a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
-<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
+<a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
 <a href= "pic01.html">天赋人权男女平等 </a><br><br>
 <a href= "pic02.html">事实就是事实（Orgasm）</a><br><br>
 <a href= "pic03.html">各行其是而已</a><br><br>
 <a href= "pic04.html">日本的野心</a><br><br>
 <a href= "pic05.html">日本的男女</a><br><br>
 <a href= "pic06.html">Sorry！南京失守</a><br><br>
-<a href= "pic07.html">House of Cards《纸牌屋》</a><br><br>　
+
 
 
 
