--- a/pic04.html
+++ b/pic04.html
@@ -49,7 +49,9 @@
 
 	</center>
 
-	<br><br>
+	<br><br><a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+	<a href= "pic05.html">日本的男女</a><br><br>
+
 	</font>
 
 	
