--- a/pic05.html
+++ b/pic05.html
@@ -49,7 +49,9 @@
 
 	</center>
 
-	<br><br>
+	<br><br><a href= "link03.html">Severn’s speech before the UN Earth Summit in Rio</a><br><br>
+<a href= "pic04.html">日本的野心</a><br><br>
+
 	</font>
 
 	
