--- a/link03.html
+++ b/link03.html
@@ -50,10 +50,11 @@
 Severn’s speech before the UN Earth Summit in Rio, Brazil in 1992. <br><br>
 如果现实不是这样（或者，学校教的没有用），那么一定是哪儿出问题了？ <br><br>
 
+
 Robber Barons.<br><br>
 <a href= "link01.html">普京2013年国情咨文（Putin 2013 state-of-nation Address）</a><br><br>
 <a href= "link02.html">House of Cards《纸牌屋》</a><br><br>
-
+让孩子读 科幻大师的 I, Asimov 还是 Michael Dobbs的House of Cards？  <br><br>
 更多资讯，请访问：<a href= "http://www.retter2012.com" title="点击进入"> retter2012.com </a>。<br><br>
 
 Severn Cullis-Suzuki was born and raised in Vancouver, British Columbia. Her mother is a writer (French) and father David Suzuki（铃木） a third-generation Japanese Canadian. While attending Elementary School in French Immersion, at age 9, she founded the ECO. In 1992, at age 12, she raised money with members of ECO to attend the Earth Summit in Rio de Janeiro. <br><br>
